'增加水槽选择'

--- a/瓷砖选择.md
+++ b/瓷砖选择.md
@@ -20,9 +20,9 @@
 不要用装修公司特供的砖，来源不明。
 
 ## 19年价格
-30*30 品牌瓷砖 几块到十几块
-30*60 十几块，节假日可能打折
-80*80 几十到几百，几十的很可能贴牌，比较薄质量差，建议不考虑
+30\*30 品牌瓷砖 几块到十几块
+30\*60 十几块，节假日可能打折
+80\*80 几十到几百，几十的很可能贴牌，比较薄质量差，建议不考虑
 
 ## 国标
 
