'完善水槽选择'

--- a/水槽选择.md
+++ b/水槽选择.md
@@ -22,7 +22,6 @@
 * 强度：分为屈服强度、抗拉强度；屈服强度是引发塑性变形（永久变形）时的力的度量，抗拉强度是引发断裂时的力的度量。一般说强度指的是抗拉强度。不锈钢强度高，石材强度比不锈钢低。
 * 韧性：和强度差不多，也是抵抗断裂或破碎的能力。陶瓷韧性低，不锈钢韧性高
 * 比较普遍的情况是硬度高->强度低，硬度低->强度高，但是这两者可以通过工艺同时提高，所以这两个量没有很强的物理学相关性
-
 * 石英就是二氧化硅
 
 ## 选购避坑
@@ -30,7 +29,27 @@
 * 国产石英砂品质不比进口的差，主要看品牌做工如何
 * 台下盆可以加一个台下盆支架，以避免水槽掉下来的风险
 ![](./img/%E5%8F%B0%E4%B8%8B%E7%9B%86%E6%94%AF%E6%9E%B6.jpg)
+* 不锈钢水槽要注意是否真的304不锈钢，可能买到201，网上有不锈钢检测液。要在背面检测，避免滴到涂层上
 
 ## 评论反馈
 
 * 石英水槽用久了一样的很油，不如买个大牌不锈钢
+
+## 不锈钢水槽种类
+
+* 拉伸水槽：没有焊缝，便宜，无漏水风险
+* 手工槽：可能有焊缝，材料厚度均匀，较贵，国标厚度是1.2mm，这样就够用了，太厚的是噱头。
+
+## 细节
+
+* 不锈钢水槽有带纳米涂层的，能管个一年半载的。
+* 水槽下水可以用容易取下来清洗的u型管
+
+## 安装工艺
+
+台上盆：安装方便，但是不好打理
+![](./img/%E5%8F%B0%E4%B8%8A%E7%9B%86.jpg)
+台中盆：现场安装，考验师父技术，封边封的好是好用的，封的不好也会藏污纳垢
+![](./img/%E5%8F%B0%E4%B8%AD%E7%9B%86.jpg)
+台下盆：最好是提前把水槽发给橱柜台面厂商，让他们帮忙粘，这样不考验师父手艺。台下盆只要不掉下来，是最好打理的。
+![](./img/%E5%8F%B0%E4%B8%8B%E7%9B%86.jpg)
