--- a/水槽选择.md
+++ b/水槽选择.md
@@ -53,3 +53,7 @@
 ![](./img/%E5%8F%B0%E4%B8%AD%E7%9B%86.jpg)
 台下盆：最好是提前把水槽发给橱柜台面厂商，让他们帮忙粘，这样不考验师父手艺。台下盆只要不掉下来，是最好打理的。
 ![](./img/%E5%8F%B0%E4%B8%8B%E7%9B%86.jpg)
+
+## 结论
+
+厨房用手工不锈钢水槽，厕所用石英石水槽
