--- a/水槽选择.md
+++ b/水槽选择.md
@@ -47,11 +47,11 @@
 
 ## 安装工艺
 
-台上盆：安装方便，但是不好打理
+* 台上盆：安装方便，但是不好打理
 ![](./img/%E5%8F%B0%E4%B8%8A%E7%9B%86.jpg)
-台中盆：现场安装，考验师父技术，封边封的好是好用的，封的不好也会藏污纳垢
+* 台中盆：现场安装，考验师父技术，封边封的好是好用的，封的不好也会藏污纳垢
 ![](./img/%E5%8F%B0%E4%B8%AD%E7%9B%86.jpg)
-台下盆：最好是提前把水槽发给橱柜台面厂商，让他们帮忙粘，这样不考验师父手艺。台下盆只要不掉下来，是最好打理的。
+* 台下盆：最好是提前把水槽发给橱柜台面厂商，让他们帮忙粘，这样不考验师父手艺。台下盆只要不掉下来，是最好打理的。
 ![](./img/%E5%8F%B0%E4%B8%8B%E7%9B%86.jpg)
 
 ## 结论
