--- a/家电选择.md
+++ b/家电选择.md
@@ -9,3 +9,10 @@
 ## 厨卫吊顶
 
 * 欧普 3500-5000 两个套餐 铝扣板300*300 小套餐包含两个风扇和灯，大套餐额外包含凉霸一个
+
+## 电视
+
+* 电视分为LCD和OLED屏幕的电视，花里胡哨名字的基本都是OLED。他们都是自发光的屏幕，但是显色原理不一样。
+* OLED是PWM调光，有频闪风险（PWM调光频率在1250Hz才不伤眼，但是现在远远不够），但是更亮，色彩更好。
+* OLED采用的有机材料，寿命比LCD短挺多，像素点可能会提前老化，从而造成烧屏
+* LCD的黑色没有OLED的纯，对比度不高，LCD更耗电，但是LCD是直流电DC调光，不频闪
