提交很多东西

--- a/家电选择.md
+++ b/家电选择.md
@@ -16,3 +16,21 @@
 * OLED是PWM调光，有频闪风险（PWM调光频率在1250Hz才不伤眼，但是现在远远不够），但是更亮，色彩更好。
 * OLED采用的有机材料，寿命比LCD短挺多，像素点可能会提前老化，从而造成烧屏
 * LCD的黑色没有OLED的纯，对比度不高，LCD更耗电，但是LCD是直流电DC调光，不频闪
+
+## 冰箱
+
+海尔
+
+## 洗衣机
+
+海尔
+
+## 洗碗机
+
+美的
+
+## 烟机灶具
+
+方太、老板
+
+美的很多产品都是老二
