--- a/灯光选择.md
+++ b/灯光选择.md
@@ -2,12 +2,16 @@
 
 * 卧室可以用吸顶灯；客厅使用筒灯、射灯、灯轨道、灯带进行无主灯的设计；鞋柜，床头等地方使用感应灯照脚下，以防止踢到脚。
 
+## 光的概念
+![](./img/%E5%85%89.jpg)
+
+灯光设计要考虑到空间的结构性。所谓的无主灯设计核心理念就是，给每个功能区单独的灯光。所以无主灯简单的说就是给饭厅多个灯光，客厅多个灯光，门廊多个灯光。拓展一下，要利用三维立体的灯光设计，灯不一定是从顶上射到地上的，可以是横着的，漫反射出来的。
+
+## 灯具选择
+
+中山是中国的灯城
+
 筒灯就是普通的圆筒上面挂个灯；射灯是灯周围用镜面反射改变光的方向，达到让光照向一个方向的作用。
 ![](./img/%E7%AD%92%E7%81%AF%E5%B0%84%E7%81%AF.jpg)
 
 灯轨道是一条轨道，可以将各种灯通过磁铁吸在上面，比较好造型和diy
-
-光的概念
-![](./img/%E5%85%89.jpg)
-
-灯光设计要考虑到空间的结构性。所谓的无主灯设计核心理念就是，给每个功能区单独的灯光。所以无主灯简单的说就是给饭厅多个灯光，客厅多个灯光，门廊多个灯光。拓展一下，要利用三维立体的灯光设计，灯不一定是从顶上射到地上的，可以是横着的，漫反射出来的。
