'增加很多笔记'

--- a/窗户选择.md
+++ b/窗户选择.md
@@ -1,6 +1,6 @@
 # 窗户选择
 
-三层中空玻璃，最外层low-e高透，铝条插角一体弯折工艺，pa66 GF 25尼龙隔热条，五金要大牌，外低内高导轨挡水，排水口内外导轨都要要，还要加地漏式排水
+三层中空玻璃，最外层low-e高透，铝条插角一体弯折工艺，原生铝有检测报告6063-T5型号规格，pa66 GF 25尼龙隔热条，壁厚1.8mm，五金要大牌，外低内高导轨挡水，排水口内外导轨都要要，还要加地漏式排水，窗户外沿增加向外流水的斜坡，三元乙丙橡胶条。腔体越多隔热越好
 刘依宁600一平左右
 
 系统门窗是有国标的
@@ -8,6 +8,8 @@
 ## 推拉窗
 
 * 两个导轨外低内高，用于挡水，可以在内部有一个挡水板
+* 内开内倒
+* 外开加防坠链
 
 ## 断桥铝
 
@@ -21,6 +23,13 @@
   * T型是I型的改进，让断桥铝形成“等温线齐平”
   * 空腔条是最终形态，应该最贵，各项性能都是最佳
 * 铝条插角工艺，要一体弯折的，不要拼接的，拼接的容易漏气
+* 多腔体工艺，腔体越多隔热越好
+![](./img/%E5%A4%9A%E8%85%94%E4%BD%93.jpg)
+* 氟碳漆喷涂更好，更耐磨好看，粉末喷涂工艺是撇得
+* 中间隔热条在关闭状态一定要封住，否则没有任何隔热效果
+![](./img/%E5%AF%86%E5%B0%81%E6%9D%A1%E5%AF%86%E5%B0%81.jpg)
+![](./img/%E5%AF%86%E5%B0%81%E6%9D%A1%E6%9C%AA%E5%AF%86%E5%B0%81.jpg)
+
 ## 玻璃种类
 
 * 白玻：爆率比较高便宜
@@ -37,3 +46,25 @@
 ## 窗户五金
 
 * 要用大品牌的，不说的肯定是杂牌
+* 国产派格、坚朗
+* 国外好博、希美克、诺托
+
+## 玻璃厚度
+
+3平以内用5mm厚钢化玻璃
+超过5平米用6-8mm厚的玻璃
+
+## 密封胶条
+
+* 三元乙丙密封条
+
+## 金刚网
+
+我们的可能没有，有的话选高透金刚网
+
+## 安装
+
+* 安装在滴水线以内3cm以上
+* 固定片固定和膨胀螺丝固定，膨胀螺丝不能用塑料的，得用铁的
+* 膨胀螺丝不能打在隔热条上
+* 安装完了要打密封胶
