--- a/辅材选择.md
+++ b/辅材选择.md
@@ -10,3 +10,23 @@
  1. 正泰
  2. 公牛
  3. 德力西
+
+## 密封胶选择
+
+分为水基和硅基和混合
+
+### 水基乳胶
+
+* 长时间光照下性能变弱
+* 好操作
+* 环保，没什么气味
+* 可以在任何表面刷漆
+* 有的产品会加一些硅胶，以增加耐用性
+
+### 硅基硅胶
+
+* 弹幕说是玻璃胶
+* 防水
+* 不适用于粗糙表面，最适合在金属、塑料、玻璃等平滑的表面上
+* 户外型号不适合用在室内，因为有挥发性物质
+* 使用有一定难度
