--- a/家电选择.md
+++ b/家电选择.md
@@ -6,6 +6,11 @@
 * 家博会 海尔单风扇 23000-24000
 * lyn 美的理想家双风扇 26000 新款
 
+### 种类
+
+* 多联机（氟机、空气能）：管道中流制冷剂，大多都用这个
+* 水机： 管道中流水
+
 ## 厨卫吊顶
 
 * 欧普 3500-5000 两个套餐 铝扣板300*300 小套餐包含两个风扇和灯，大套餐额外包含凉霸一个
@@ -34,3 +39,13 @@
 方太、老板
 
 美的很多产品都是老二
+
+### 燃气灶
+
+* 面板有两种：不锈钢和钢化玻璃，钢化玻璃小概率爆裂，但是易清洗
+* 天然气软管加点钱换成不锈钢的，更加耐用
+* 点火自动脉冲的不用一直按着点火
+* 进风方式选全进风的
+* 锅支架铸铁的便宜抗造但是易生锈，搪瓷的没铸铁抗造，但是易清洁
+* 炉头火盖选铜的，铁制最差
+* 价格不超过一千也能买到不错的，1000-2000带防干烧功能，做工好，2000+不必要了
