--- a/木材选择.md
+++ b/木材选择.md
@@ -2,7 +2,7 @@
 
 ## 全屋定制板材
 
-板材是由`基材（素板）+饰面`组成，基材的制作决定了板材的环保性，里面会含有带污染物的胶水。
+板材是由`基材（素板）+饰面`组成，素板是由`各种形式的木头+胶`组成。胶水的添加决定了板材的环保性，无醛指的就是使用mdi胶的板材。
 ![](./img/%E6%9D%BF%E6%9D%90.jpg)
 
 ### 国产板材分类
@@ -25,6 +25,18 @@
 | 第二梯队 | 生态板/多层板        | 实木板/多层板        | 颗粒板               | 颗粒板/欧松板      | 实木板和密度板雕刻 | 欧松板/多层板/生态板 |
 | 第三梯队 | 颗粒板/欧松板/密度板 | 生态板               | 密度板/生态板        | 生态板/密度板      | 其他靠贴面         | 实木板               |
 
+#### 成本价参考
+
+大小统一1220*2440
+
+* 颗粒板110-150一张（杂牌，有环保等级）
+* 多层板150-300一张
+* 欧松板200-300一张
+* 工厂加工费用大概150一张板，包含切割和封边（有人说贵了50一平）  
+* 人工安装费120-150一平方（浙江，偏贵，有人说50一平）
+* 利润20%+售后5%价格
+* 按浙江的高价算的投影价格7 8百
+
 ### 饰面分类
 
 饰面主要是为了好看和摸着舒服，其他不用考虑
@@ -37,16 +49,30 @@
 
 * eva热熔胶封边：最多，胶大，不环保，易开裂
 * pur封边：综合比eva封边都好
-* 激光封边：贵，假的多
+* 激光封边：贵，假的多，但是好。只有国外机器可以激光封边
 
 ### 五金品牌
 
 国产技术成熟，选大牌即可
 
+* 百隆
 * 东泰
 * 焊膏
 * 顶固
 * 诺米
+* 
+### 板材品牌及特性
+
+* 兔宝宝：生态板、多层板、欧松板（mdi）
+* 千年舟：欧松板（进口mdi）、大豆胶板（大豆胶粘性差，不好用）
+* 莫干山：生态板、欧松板、多层板
+* 福人：密度板、其他信息较少
+* 万华：禾香板素板（mdi，握钉力好像不行）
+* 大王椰：多层板、欧松板、欧松板（mdi）、生态板
+* 万象：生态板、多层板、欧松板
+* 鲁丽：欧松板（mdi）、欧松板、生态板
+* 华洲：颗粒板（mdi）、欧松板（mdi）、多层板、生态板
+* 大亚：没找到，其他渠道：颗粒板、密度板
 
 ## 实木家具
 
