'增加沙发相关选购'

--- a/卫生间设计.md
+++ b/卫生间设计.md
@@ -17,3 +17,17 @@
 
 * 马桶
 * 更大的储物空间
+
+# 便器选择
+
+## 蹲便器
+
+* 蹲便器本身很便宜
+* 要看房子带不带存水弯的，如果本身带了，则买不要存水弯的便器，如果没有就要的
+* 水箱尽量要可以入墙的
+
+## 马桶
+
+## 存水弯
+
+下水处必须要存水弯，否则会反臭
