--- a/厨房设计.md
+++ b/厨房设计.md
@@ -10,3 +10,9 @@
 * 软水机不接入饮用水管路，生活用水使用
 * 软水机流量1T/h就够用
 * 软水机出来的水可以烧开饮用吗？钠离子会超标吗？据说有锌离子？
+
+## 厨房下水
+
+* 有油污的地方下水不能做pvc的存水弯，否则会容易被油污堵住，还要用75管。
+* 厨房水槽下水一般会自带一个可拆卸的存水弯防臭装置，够用了。
+* 厨房水槽的pvc管要带点坡度
