增加木材和中央空调相关

--- a/家具选择.md
+++ b/家具选择.md
@@ -10,6 +10,7 @@
 
 ## 样式
 
+* 意式沙发佛山的厂子都能做，大小材质随便选
 * baxter大象耳朵
 ![](./img/baxter%E5%A4%A7%E8%B1%A1%E8%80%B3%E6%9C%B5.jpg)
 * 贵妃椅
@@ -17,7 +18,7 @@
 * baxter云朵：很软，好搭配
 ![](./img/baxter%E4%BA%91%E6%9C%B5.jpg)
 * 拐角沙发
-* baxter悬浮：造型正常，有点原，下面可以进扫地机器人
+* baxter悬浮：造型正常，有点圆，下面可以进扫地机器人
 
 ## 面料
 
@@ -33,7 +34,7 @@
 
 ## 框架
 
-一般是木头加蛇形弹簧
+一般是实木加蛇形弹簧
 
 * 木头框架不要拼接，材质要俄罗斯落叶松、芬兰松整木，宽度7cm以上，厚度2cm以上
 * 蛇形弹簧要拱形且弧度大的，镀锌的更好
@@ -42,3 +43,8 @@
 
 * 真皮的6 7k以上
 * 布艺5k不错了
+
+## 选购渠道
+
+* 广东佛山的家具最出名，那里有世界上所有的家具，而且很便宜质量很好
+* 找到工厂最省钱
