--- a/家电选择.md
+++ b/家电选择.md
@@ -1,15 +1,43 @@
 # 家电选择
 
+家电在网上买或者熟人买和网上进行对比，透明价格
+
 ## 中央空调
 
+每个内机分p数的，有出风口和吸风口和检修口，所以要根据房间定制。
+
+* 制冷量：120、140、160，指的是12000W、14000W、16000W
+* 内机p数：1p=735w输入功率，p数\*735\*能效比=制冷量
+* 提升水泵：挺有必要的，可以帮助排出冷凝水，贵不了多少
+* 1拖x：一个外机x个内机
+* 外机风扇数量：影响散热速度，双风扇散热好一些
+* 多联机：使用传统空调的制冷剂方式制冷，一个外机拖多个内机。不要水机，要地暖才考虑水机
+* 控制方式：类似酒店的空调面板、遥控器、无线局域网功能
+
+### 价格
+
 * 家博会 美的单风扇 28000
+* 家博会 美的理想家三代 1拖5 160 3w1出头
+* 海信 和理想家三代差不多，1拖5 160
+* 日立 牌子贵一点，东西和海信一样。海信收购了日立
 * 家博会 海尔单风扇 23000-24000
+* 大金 工厂 1拖5 4w-5w
 * lyn 美的理想家双风扇 26000 新款
 
-### 种类
+### 购买渠道
 
-* 多联机（氟机、空气能）：管道中流制冷剂，大多都用这个
-* 水机： 管道中流水
+* 本地线下直营商最好，因为中央空调定制化程度很高，线上购买也是分配一个线下的经销商。
+
+### 要问什么
+
+* 加项有哪些
+* 提升水泵收费
+* 出风口加长收费
+* 质保多久
+* 安装收费
+* 管道加长收费
+* 控制方式更改收费
+* 梁上打孔收费
 
 ## 厨卫吊顶
 
