--- a/木材选择.md
+++ b/木材选择.md
@@ -77,3 +77,13 @@
 ## 实木家具
 
 木材分硬木和软木，常见的黑胡桃、樱桃木等都是硬木。成品家具尽量用硬木。
+
+* 樱桃木：质地较软，纹理细腻，用久了会氧化变红色，一年后趋于稳定。樱桃木外层会有一圈白边，不易变红，好的厂家会把白边去掉，不去的话氧化稳定后颜色不统一。
+![](./img/%E7%99%BD%E8%BE%B9%E6%A8%B1%E6%A1%83%E6%9C%A8.jpg)
+* 白橡木：棕黄色，比樱桃木硬，外表稳定，干燥狠了会开裂，适合西南地区用。橡胶木不是项目，价值差的很远
+* 红橡木：纹路比白橡木粗犷，价格比白橡木略低，商家不说明大概率红橡木或混搭
+* 白蜡木：硬度不错，颜色比白橡木浅，偏暖黄色。水曲柳性质很像白蜡，但不一样。
+* 榉木：硬度高，床架用的多，遇热易弯曲，干燥了易开裂
+* 硬枫木：硬度高，纹理好看，颜色很浅
+* 黑胡桃：比上面的软，其他都很好，价格特别贵
+* 黑檀木：没有一个木材学名叫黑檀木，商家这么称呼基本就是杂木刷黑了
