'增加装修信息'

--- a/家电选择.md
+++ b/家电选择.md
@@ -62,18 +62,59 @@
 
 美的
 
+* 清洁指数：越高清洁能力越强
+* 水压
+* 喷淋臂设计
+* 洗涤模式
+* 除菌技术
+* 烘干技术：西门子晶蕾烘干，效果可以但是贵；开门烘干适合洗的多的情况
+
 ## 烟机灶具
 
 方太、老板
 
 美的很多产品都是老二
 
+### 油烟机
+
+* 侧吸：噪音大，面板容易沾油需要经常清洗，吸烟效果好，不易碰头
+* 顶吸：吸烟效果不好，但好看可嵌入，噪音低
+* 测顶吸：侧吸大吸力，顶吸防逃逸，贵
+* 风量：17-22立方，风量越大噪音越大
+* 风压：向烟道吹风的力量，我们几乎不用考虑
+* 止逆阀：烟机安装时要安装，防止别人的油烟灌进来
+* 声压级噪音：噪音的指标，国标是73dB。要求声压级噪音+14<=73dB
+* 油脂分离度：越高对电机等部件的损耗越低。
+* 自清洗：各个厂家不一样，热干洗、高温蒸汽洗、高压水洗好于智能旋转干洗。外部面板需要自己清洗，吸力越大外面板越不容易沾油。
+
 ### 燃气灶
 
+* 热效率：热效率>=59%（一级能效）
+* 热负荷：因为要爆炒，所以要选4.5kW-5kW甚至更高的
 * 面板有两种：不锈钢和钢化玻璃，钢化玻璃小概率爆裂，但是易清洗
 * 天然气软管加点钱换成不锈钢的，更加耐用
 * 点火自动脉冲的不用一直按着点火
-* 进风方式选全进风的
+* 进风方式：全进风的
 * 锅支架铸铁的便宜抗造但是易生锈，搪瓷的没铸铁抗造，但是易清洁
 * 炉头火盖选铜的，铁制最差
 * 价格不超过一千也能买到不错的，1000-2000带防干烧功能，做工好，2000+不必要了
+
+## 燃气热水器
+
+* 出水量：每分钟输出升高25度的水的升数，双卫16L挺好。
+* 水伺服：出水口一个电机可以监测水温，如果热水没达到设定水温则自动调小水流量从而让水流慢一点以达到设定温度。多人同时一开一关水温不会影响，有点用。
+* 下置风机：风机远离高温的燃烧室，让热水器寿命更长，吹进更多氧气，燃烧更充分，产生更少一氧化碳
+* 热交换器材质：铜的好，不锈钢不适合江边用。
+* 微火控温：有很多个燃烧头，可以更精确的调整火力大小
+* 降噪：挺有用
+* 封闭式燃烧室：燃烧加热水的管子那个部位是封闭的，尽可能的让燃烧的热量传导到水中，以达到节省燃气的目的。
+* 防风火源：和防风打火机一样的原理燃烧，以防风。
+* 零冷水：随时水龙头打开立即出热水，要预埋回水管。热水管道长的更需要零冷水。不是特别需要
+* 瀑布浴：出水口有一个增压泵，水压不够则可以增压。没太大用
+* 一级能效：燃气燃烧的热量97%以上全变成水温，节能。只有上置风机才能达到一级能效。一级能效的都是冷凝机，需要排出冷凝水，不太好。
+
+### 品牌
+
+* 万和没有下置风机的，全系列都是3k以下
+* 海尔和美的都挺好
+* 万家乐有下置风机，还没看
