--- a/工艺注意事项.md
+++ b/工艺注意事项.md
@@ -5,3 +5,14 @@
 * 要用双层石膏板夹大芯板，防止开裂变形
 * 窗帘导轨上面也要一个大芯板，用于找平
 
+## 找平工艺
+
+* 冲筋打点：
+* 顺平：
+
+## 瓷砖铺贴工艺
+
+* 干挂法：
+* 薄贴法：比较费钱，但是效果可以，需要墙面平整度很高，估计要冲筋打点找平
+
+## 
