--- a/瓷砖选择.md
+++ b/瓷砖选择.md
@@ -10,9 +10,14 @@
 瓷质砖吸水率更低，硬度更高，内部空间更致密
 
 ## 装修工艺
+
 瓷片泡水后再贴，可以在上墙后不吸收水泥砂浆里的水分，粘贴更牢固，不容易收缩。不泡水就像我们的厕所瓷砖那样裂了。
 
 ## 选购要点
+
+* 胚体：瓷砖背面，地砖要瓷质砖，吸水率小于0.5%，倒水上去不会吸收，砖立起来弹一下中间，有铜钟一样的声音。
+* 釉面：瓷砖正面，防滑系数要在0.5以上
+* 平整度：两块瓷砖正对正贴一起，看看能不能贴死，左右排列一起，看看接缝处整不整齐
 不要管砖的名称，太多了而且没有规范，认不完的，要关注砖的各种性能。
 防滑性高了，防污渗水能力就差了，本质上是砖表面的平整度和孔洞多少。
 硬度，跟店里高档的瓷砖硬度对比，不要差太多就行。没必要用钥匙什么的去划。
@@ -20,9 +25,9 @@
 不要用装修公司特供的砖，来源不明。
 
 ## 19年价格
-30\*30 品牌瓷砖 几块到十几块
-30\*60 十几块，节假日可能打折
-80\*80 几十到几百，几十的很可能贴牌，比较薄质量差，建议不考虑
+300\*300 品牌瓷砖 几块到十几块
+300\*600 十几块，节假日可能打折
+800\*800 几十到几百，几十的很可能贴牌，比较薄质量差，建议不考虑
 
 ## 国标
 
@@ -36,3 +41,9 @@
 
 ## 踢脚线波打线（boundary）加工费
 1 2 3元一米 
+
+## 重庆选购地点
+
+* 马家岩建材城
+* 巴南瓷砖基地
+* 巴山
