--- a/窗户选择.md
+++ b/窗户选择.md
@@ -1,6 +1,10 @@
 # 窗户选择
 
-三层中空玻璃，最外层low-e高透，铝条插角一体弯折工艺，原生铝有检测报告6063-T5型号规格，pa66 GF 25尼龙隔热条，壁厚1.8mm，五金要大牌，外低内高导轨挡水，排水口内外导轨都要要，还要加地漏式排水，窗户外沿增加向外流水的斜坡，三元乙丙橡胶条。腔体越多隔热越好
+* 长4980，侧1500左右，高2.4m左右
+* 5+12Ar+5+12Ar+5单银Low-E：三玻两腔，中间充氩气，最外层单层银面层low-e玻璃
+* 5+12Ar+5+12Ar+5双银Low-E：三玻两腔，中间充氩气，最外层双层银面层low-e玻璃
+
+三层中空玻璃，最外层low-e高透，铝条插角一体弯折工艺，原生铝有检测报告6063-T5型号规格，pa66 GF 25尼龙隔热条，壁厚1.8mm，五金要大牌，外低内高导轨挡水，排水口内外导轨都要要，还要加地漏式排水，窗户外沿增加向外流水的斜坡，密封条三元乙丙橡胶条。腔体越多隔热越好
 刘依宁600一平左右
 
 系统门窗是有国标的
@@ -35,7 +39,7 @@
 * 白玻：爆率比较高便宜
 * 绿玻：爆率比较高便宜，隔绝紫外线
 * 超白玻璃（最贵）：光线透过率最高，要阳光的必选。不能反射红外线，夏天很热
-* low-e玻璃：隔紫外线，隔热，但会拦截一部分亮度（光线透过率没这么高），帮助家里节能。low-e玻璃有不同的透光率选择，越黑的越节能。重庆用这个比较好，但是要选择合适的透光率
+* low-e玻璃：隔紫外线，隔热，但会拦截一部分亮度（光线透过率没这么高），帮助家里节能。low-e玻璃有不同的透光率选择，越黑的越节能。重庆用这个比较好，但是要选择合适的透光率。有单银玻璃、双银玻璃、三银玻璃之分，银面层越多透光率不一定越低，但是越贵。
 
 ## 玻璃工艺
 
