--- a/灯光选择.md
+++ b/灯光选择.md
@@ -16,6 +16,60 @@
 
 灯轨道是一条轨道，可以将各种灯通过磁铁吸在上面，比较好造型和diy
 
+* 色温：
+* 功率：
+* 显色指数：Ra>95的灯具，重点关注R9，显红色，要高到和其他差不多，蓝光尽量压低一点。
+
 ## 购买渠道
 
 * 大石坝找
+
+## 照明设计
+
+* 客厅照度标准：150lx/m<sup>2</sup>
+* 照明率：0.42
+* 维护系数：0.8
+* 发光效率：80lm/w
+* 光源利用率：反光灯槽0.15、正灯槽0.2、线性灯0.8、装饰灯0.9、射灯1.0
+* 平均照度：(灯具光通量\*灯具数量\*照明率\*维护系数)\/房屋面积
+* 灯具总光通量=基础照明光通量+重点照明光通量
+
+### 设计原则
+
+按照基础重点氛围照明或者高中低位照明原则来设计灯光，其参数由上方的公式计算
+
+### 基础重点氛围照明
+
+* 线性灯、铝槽灯带、磁吸轨道泛光灯、背景灯带都是基础照明的。基础照明提供室内的照亮需求即可。免吊顶反光槽可以用起来
+![](./img/免吊顶反光槽.jpg)
+
+* 重点照明用SQ-36射灯、SQ-24射灯，哪里需要光就给他来个射灯。轨道灯贵，可以不要
+* 氛围照明用窗帘灯带、落地灯灯带、电视柜灯带。
+
+### 高中低位照明设计
+
+* 高位照明指的是人正常站立时头顶上射下来的灯光，提供的是基础的照明功能。
+* 中位照明指的是对于特定的功能，特定的物品上面起强调效果的灯光。比如壁画射灯、电视柜灯光、橱柜下灯带、镜前灯、马桶灯、立式台灯等。
+* 低位照明指夜间或是某些场景下用于指路及烘托氛围的灯光。比如夜灯，踢脚线灯，电视墙下方看电影时的氛围灯。
+
+## 分区布灯
+
+### 餐厅
+
+餐厅可以使用长排吊灯，长度比桌子短30cm，灯具高度75cm左右，造型要简单，不要泛光与侧透的，要光线朝下刚好覆盖桌面。不要射灯，容易刺眼。  
+同时可以在上方加上吊顶边的漫反射光源，作为基础照明。  
+高级感的话，可以给餐边柜一个下踢脚线灯光，作为低位照明。
+
+### 客厅
+
+* 平均照度150lx/m<sup>2</sup>
+* 色温3500k-4000k，整个空间色温要一样
+* 功率7-9w
+* 坐沙发上不要直接看见光源
+
+## 其他经验
+
+* 洗墙射灯不是很建议，容易直接显示出墙面的瑕疵，比如不平等问题。可以在天花顶部安装漫反射灯带
+
+
+
