--- a/家电选择.md
+++ b/家电选择.md
@@ -56,6 +56,12 @@
 
 * 开门方式：十字门、法式（有抽屉）、对开门
 * 嵌入式：要在做橱柜前确定好冰箱，按尺寸定制橱柜，冰箱下方散热
+* 控温技术：监测箱内温度从而让温度稳定保持，不会因为东西多冷藏冷冻效果变差。
+* 控湿技术：风冷冰箱会加速内部水分流失，蔬菜会干，所以要根据湿度计往里加湿。
+* 除菌：很多玄乎的名字背后都是离子发生器除菌，几乎没用。
+* 除味：活性炭吸附的有点用，但是吸饱和之后还能不能用不清楚，总的来说有点用但不多
+* 控氧技术：减少新鲜蔬菜的呼吸氧化，可以让菜保存更长时间。免费做法：给蔬菜套个袋子密封。
+* 保鲜技术：迷瞪测试基本没用，核心在于要让温度稳定，温度不稳定的菜容易坏
 
 ## 洗衣机
 
