--- a/工艺注意事项.md
+++ b/工艺注意事项.md
@@ -5,14 +5,35 @@
 * 要用双层石膏板夹大芯板，防止开裂变形
 * 窗帘导轨上面也要一个大芯板，用于找平
 
-## 找平工艺
+## 墙面找平
 
-* 冲筋打点：
 * 顺平：
+* 垂平：
+* 冲筋打点：
 
-## 瓷砖铺贴工艺
+## 墙面找方
+
+## 墙砖铺贴
 
 * 干挂法：
-* 薄贴法：比较费钱，但是效果可以，需要墙面平整度很高，估计要冲筋打点找平
+* 薄贴法：用瓷砖胶（不是瓷砖背胶）粘
 
-## 
+## 墙面拉毛
+
+由于混凝土墙面太过于光滑，瓷砖贴在上面力度不够，容易掉，所以要增加墙面的粗糙度。必须要保证墙面特别粗糙且用工具铲墙都一点不掉灰，方可开始贴墙砖。  
+操作方法是用瓷砖粘接剂加墙固，混合后刷上墙，干透后很粗糙并且不会掉灰，反正让墙面凹凸不平就行。  
+一般刷过防水后需要拉毛，因为防水涂料上特别光滑
+
+## 地面找平
+
+* 自流平
+
+## 墙面挂网
+
+* 不是全屋都需要挂网，只用在新旧墙体连接处、二次结构墙体洞口回填，比如水电开槽这种外面挂网
+* 挂网分钢丝网和玻璃纤维网
+* 挂网无法避免房屋沉降引起的裂纹，只能避免墙面开裂
+
+## 墙压地，地压墙
+
+指的是墙砖和地砖接缝处采取墙砖最下方在地砖上面（墙压地）还是墙砖最下方在地砖旁边（地压墙）的做法。纠结这个没意义，因为这个缝处肯定要填美缝剂，填完了就没有缝了。
