--- a/灯光选择.md
+++ b/灯光选择.md
@@ -39,13 +39,15 @@
 
 ## 照明设计
 
-* 客厅照度标准：150lx/m<sup>2</sup>
-* 照明率：0.42
+* 住宅建筑照明标准值：GB50034-2013
+* 照度标准基本原则：一般活动75-100lx/m<sup>2</sup>；操作、阅读或就餐150lx/m<sup>2</sup>；书写300lx/m<sup>2</sup>
+* 利用系数（照明率）：0.42
 * 维护系数：0.8
 * 发光效率：80lm/w
 * 光源利用率：反光灯槽0.15、正灯槽0.2、线性灯0.8、装饰灯0.9、射灯1.0
-* 平均照度：(灯具光通量\*灯具数量\*照明率\*维护系数)\/房屋面积
+* 平均照度：(总光通量\*利用系数\*维护系数)\/房屋面积
 * 灯具总光通量=基础照明光通量+重点照明光通量
+* dialux傻瓜式计算。
 
 ### 设计原则
 
@@ -64,6 +66,20 @@
 * 高位照明指的是人正常站立时头顶上射下来的灯光，提供的是基础的照明功能。
 * 中位照明指的是对于特定的功能，特定的物品上面起强调效果的灯光。比如壁画射灯、电视柜灯光、橱柜下灯带、镜前灯、马桶灯、立式台灯等。
 * 低位照明指夜间或是某些场景下用于指路及烘托氛围的灯光。比如夜灯，踢脚线灯，电视墙下方看电影时的氛围灯。
+
+### 家居照明5步设计法
+
+1. 准备工作
+   1. 确认空间信息：长宽高、门窗位置、吊顶深度
+   2. 了解家具配置：家具位置、款式颜色
+   3. 收集业主信息：业主年龄、兴趣爱好、空间作用、喜欢明还是暗 
+2. 设置主灯光：照亮整个区域的灯光，可以是主灯，也可以是多筒灯。房间对角线长度的10分之1到8分之1作为主灯的直径
+3. 设置环境光：
+   1. 对于人的驻留区域（沙发、餐桌、阳台、厨房），分析每一个驻留地视线可能停留在哪里，就对哪里进行重点照明。比如在沙发上会看电视、看盆栽、看展示柜、看阳台，在餐椅上会看餐桌，看挂画。
+   2. 洗墙灯总宽度是墙宽度的一半，灯和墙的距离是灯和灯距离的一半但尽量在400-600mm范围
+   3. 要注意避开不想照亮的东西，比如空调
+4. 设置灯光场景：按使用场景来分析灯光是否合理，比如吃饭场景，看电视场景，餐桌上一边工作一边聊天场景
+5. 确认整体效果：把所有灯同时打开，看可不可以合并，能不能简化
 
 ## 分区布灯
 
