--- a/窗户选择.md
+++ b/窗户选择.md
@@ -62,6 +62,17 @@
 
 * 三元乙丙密封条
 
+## 边条
+
+指两块玻璃中间的那个边条，最常见的材质是铝条
+
+* 一般使用的是铝制的边条，一体折弯工艺的。铝条也称为冷边条
+* 要想保温性能好，应该使用暖边条，暖边条种类很多，只要导热系数小于0.007的都是暖边条
+* 暖边条一般是TPS/4SG隔热条、聚丙烯+不锈钢，导热系数比铝条低很多
+* 用TPS/4SG的一般是大厂才能做，要和两块玻璃一起做成整的玻璃，密封保温特别好，小厂做不了
+* 暖边条也有防止玻璃起雾的效果
+* 暖边条成本和铝条差不多，不算增配项
+
 ## 金刚网
 
 我们的可能没有，有的话选高透金刚网
