'增加很多内容'

--- a/卫生间设计.md
+++ b/卫生间设计.md
@@ -30,17 +30,16 @@
 
 ## 存水弯
 
-<<<<<<< HEAD
 * 下水处必须要存水弯，否则会反臭
 * 开发商带了存水弯的话，便器下面就不用存水弯了，否则就要买带存水弯的便器
 
 # 包落水管
 
 * 砖砌包管，要留检修口，以防堵塞
-=======
-下水处必须要存水弯，否则会反臭
 
 ## 花洒
 
-选不锈钢电镀枪灰色花洒，不要黑白的，容易积水垢
->>>>>>> e41f2da6dd2f175231a9c3a0691af6bb0e069a93
+* 选不锈钢电镀枪灰色花洒，不要黑白的，容易积水垢
+* 花洒的出水口使用连体内丝弯头可以避免出水口歪斜安装不上。
+* 便宜的做法是使用花洒定位器
+![](./img/%E8%BF%9E%E4%BD%93%E5%86%85%E4%B8%9D%E5%BC%AF%E5%A4%B4.jpg)
