--- a/基装注意事项.md
+++ b/基装注意事项.md
@@ -6,3 +6,22 @@
 
 * 如果里面有散热、插线板就不用换，否则最好是换一个
 * 强电移位装得下就不用换
+
+## 水电注意事项
+
+* 水走天电走地
+* 天上的电线要比水管高
+* 冷水管比热水管高
+* 热水管包保温棉
+* 水电管不能同槽，有可能漏水导致漏电
+* 强电弱电间隔15cm，不能同槽
+* 地面两点一线或横平竖直都可以，看预算，横平竖直更规范。
+* 墙面绝对要横平竖直
+
+## 防水卫生间
+
+* 厨房角阀出水口周边要先用堵漏剂涂刷，再刷防水
+* 卫生间的防水要做到出门拐上墙50cm，地面也要往外50cm
+![](./img/%E5%8D%AB%E7%94%9F%E9%97%B4%E5%A4%96%E9%98%B2%E6%B0%B4.jpg)
+* 卫生间回填不能用建渣，时间长了会塌，从而拉裂防水瓷砖地面。
+* 回填性价比用碳渣，但是碳渣一旦漏水容易一直潮湿。最好使用陶粒回填，做二次防水
