--- a/家电选择.md
+++ b/家电选择.md
@@ -45,10 +45,27 @@
 
 ## 电视
 
-* 电视分为LCD和OLED屏幕的电视，花里胡哨名字的基本都是OLED。他们都是自发光的屏幕，但是显色原理不一样。
-* OLED是PWM调光，有频闪风险（PWM调光频率在1250Hz才不伤眼，但是现在远远不够），但是更亮，色彩更好。
-* OLED采用的有机材料，寿命比LCD短挺多，像素点可能会提前老化，从而造成烧屏
-* LCD的黑色没有OLED的纯，对比度不高，LCD更耗电，但是LCD是直流电DC调光，不频闪
+* 电视分为LCD（液晶电视）和OLED屏幕的电视，花里胡哨名字的基本都是LCD。他们都是自发光的屏幕，但是显色原理不一样。
+
+### LCD
+
+* 液晶面板分A++、A+、A、B、C几个等级，等级越高坏点越少
+* IPS/ADS面板是一回事，可视角度广，硬屏，对比度低，通透性也差一些，观看效果不如VA面板。高端电视用va面板
+* VA面板，是软屏，按压会有水波纹。用VAC算法的va电视画面会发虚，不建议购买。电视va面板控光分区超过200分区就很好了，所以电视买va面板的比较好
+* QLED是量子点电视，也是液晶面板的一种，量子点就是一种材料，受蓝光之后激发出红光和绿光，从而提升画面的色域。用上了量子点的就是色彩更好的电视。
+* mini LED：发光点特别小的液晶电视，因为单个像素点更小，所以细腻的多
+* ULED：海信推的mini LED电视
+
+### OLED
+
+* OLED的基本是高端电视才会有，很贵
+* 电视的OLED是DC调光，没有屏闪，OLED采用的有机材料，寿命比LCD短挺多，像素点可能会提前老化，从而造成烧屏。OLED亮度没有LCD的亮
+* WOLED面板薄
+* QDOLED，比WOLED更好，但缺少偏振层，侧面观看有紫红色反光
+
+### 其他
+
+* 很多电视有开机广告，目前知道TCL、雷鸟、索尼没有广告。广告可以打电话找客服关闭，法律规定的，但是关闭了还是做不到秒开电视进系统，要等一会
 
 ## 冰箱
 
