--- a/木材选择.md
+++ b/木材选择.md
@@ -92,7 +92,7 @@
 
 由顶层和下层的不同的排列组合构成不同的木地板。初步定新三层或者预算不够强化复合，因为好打理
 
-* 顶层：实木或耐磨层（木纹纸加三氧化二铝）
+* 顶层：木皮或耐磨层（木纹纸加三氧化二铝，也叫金刚面）
 * 下层：同顶层实木、软木、多层实木、密度板
 * 种类：纯实木、三层实木、多层实木、新三层实木（耐磨面）、强化复合地板（密度板）
 ![](./img/%E5%AE%9E%E6%9C%A8%E5%A4%8D%E5%90%88%E5%9C%B0%E6%9D%BF.jpg)
