--- a/水槽选择.md
+++ b/水槽选择.md
@@ -1,6 +1,6 @@
 # 水槽选择
 
-传统水槽是不锈钢的，新式是石英的
+传统水槽是不锈钢的，新式是石英石的
 
 ## 石英石水槽的成分
 
@@ -56,4 +56,7 @@
 
 ## 结论
 
-厨房用手工不锈钢水槽，厕所用石英石水槽
+* 厨房用手工不锈钢水槽，厕所用石英石水槽或陶瓷一体水槽
+* 洗杯器没有用
+* 皂液器没有用
+* 台控没有太大用
