--- a/石材选择.md
+++ b/石材选择.md
@@ -4,6 +4,15 @@
 
 ## 材料
 
-* 石英石：便宜，但是砸狠了可能会裂
-* 岩板：贵，性能比石英石更好
+* 石英石：便宜，硬度高，质量参差不齐，选到好的石英石很具性价比
+* 岩板：贵，密度比石英石更高，比石英石更硬，砍骨头有可能会裂，因为太脆
+* 大理石：天然石材，硬度一般，密度一般，贵，有天然的花纹，有可能有一点辐射，不建议使用
+* 岗石：硬度不够的石英石，要注意避雷
 * 不锈钢：贵，不用
+
+### 石英石选择
+
+* 硬度主要看石英砂的含量，石英砂含量高，超过93%的就硬密度高，更耐划，可以使用铁的物件在上面划，划出来的道道是铁粉而不是石英石的粉就证明硬度可以。硬度不够是岗石。石英石比大理石还要硬
+* 厚度1.5cm以上的，要注意是石英石厚度不是边缘折下来的高度
+* 检验质量的方法：用打火机烧不变黑、小刀钥匙划不出伤、水性笔不渗色
+* 台下盆和尺寸要在工厂切割，不要让工人现场做。
