--- a/木材选择.md
+++ b/木材选择.md
@@ -1,5 +1,6 @@
 # 木材选择
 
+
 ## 全屋定制板材
 
 板材是由`基材（素板）+饰面`组成，素板是由`各种形式的木头+胶`组成。胶水的添加决定了板材的环保性，无醛指的就是使用mdi胶的板材。
@@ -57,13 +58,13 @@
 
 * 百隆
 * 东泰
-* 焊膏
+* 悍高
 * 顶固
 * 诺米
    
 ### 板材品牌及特性
 
-* 兔宝宝：生态板、多层板、欧松板（mdi）
+* 兔宝宝：生态板、多层板、欧松板（mdi），代工厂也很多
 * 千年舟：欧松板（进口mdi）、大豆胶板（大豆胶粘性差，不好用）
 * 莫干山：生态板、欧松板、多层板
 * 福人：密度板、其他信息较少
@@ -73,6 +74,27 @@
 * 鲁丽：欧松板（mdi）、欧松板、生态板
 * 华洲：颗粒板（mdi）、欧松板（mdi）、多层板、生态板
 * 大亚：没找到，其他渠道：颗粒板、密度板
+* 三千方：没找到，其他渠道：多层板，很多地方都有三千方的代工厂，可以说是本地小品牌板材了
+
+### 全屋定制问题汇总
+
+* 板材种类，品牌，精板还是素板，厚度多少，有哪些花色，授权书有吗
+* 五金标配什么型号，品牌
+* 拉手标配什么
+* 拉直器多少钱一根
+* 抽屉多少钱一个
+* 灯光按米还是根计算，稳压器多少钱一个
+* 封边什么工艺
+* 开放格怎么算
+* 见光板怎么算
+* 付款比例怎么样
+
+### 全屋定制订购流程
+
+* 先找某家全屋定制上门量尺寸
+* 商家出CAD和效果图
+* 拿着效果图去找别家出价格
+* 找到最便宜的一家下单
 
 ## 实木家具
 
