--- a/灯光选择.md
+++ b/灯光选择.md
@@ -16,9 +16,10 @@
 
 灯轨道是一条轨道，可以将各种灯通过磁铁吸在上面，比较好造型和diy
 
-* 色温：
+* 色温：4000k客厅，3500k卧室
 * 功率：
 * 显色指数：Ra>95的灯具，重点关注R9，显红色，要高到和其他差不多，蓝光尽量压低一点。
+* 色容差SDCM：色容差高了同样4000k会有偏色情况，要色容差小于3SDCM的比较好
 * 灯功率越高越需要散热，用久了之后发光能力会下降。冷轧钢散热好一些
 
 ### 灯带
