--- a/卫生间设计.md
+++ b/卫生间设计.md
@@ -25,15 +25,21 @@
 * 蹲便器本身很便宜
 * 要看房子带不带存水弯的，如果本身带了，则买不要存水弯的便器，如果没有就要的
 * 水箱尽量要可以入墙的
+* 要全管道施釉的，釉面越光滑越好
+* 陶瓷胚体要颜色偏奶白奶黄的，偏灰的不行，敲击声音清脆，密度高更重的好
 
 ## 马桶
+
+* 旋风冲水冲力较好，冲大便比较容易
+* 釉面大家都差不多，很成熟的工艺了
+* 尿垢主要是冲水不够多，存水弯残留尿液造成的，用满箱水冲洗就没问题
 
 ## 存水弯
 
 * 下水处必须要存水弯，否则会反臭
 * 开发商带了存水弯的话，便器下面就不用存水弯了，否则就要买带存水弯的便器
 
-# 包落水管
+## 包落水管
 
 * 砖砌包管，要留检修口，以防堵塞
 
@@ -43,3 +49,7 @@
 * 花洒的出水口使用连体内丝弯头可以避免出水口歪斜安装不上。
 * 便宜的做法是使用花洒定位器
 ![](./img/%E8%BF%9E%E4%BD%93%E5%86%85%E4%B8%9D%E5%BC%AF%E5%A4%B4.jpg)
+* 花洒表面工艺：电镀>拉丝>烤漆/水镀
+* 龙头主体材质：要铜/精铜/59A精铜，不要纯铜以外的材料
+* 花洒软管不要不锈钢多段的，容易积水垢，要pvc软管的
+* 花洒出水孔要液态硅胶孔的，容易清理不易堵塞
