--- a/木材选择.md
+++ b/木材选择.md
@@ -96,6 +96,20 @@
 * 拿着效果图去找别家出价格
 * 找到最便宜的一家下单
 
+### 参考价格和参数
+
+* 重庆玛格：规模很大，国标起草单位之一
+  * 价格800+一投影
+  * 柜门柜体背板 厚度 18mm
+  * 五金玛格自己的，终身免费更换
+  * 封边pur，加钱上激光2000+
+  * 抽屉355一个
+  * 拉直器100+，2m4以上要加
+  * 灯光免费开槽，灯很贵，不如自己买
+  * 免费出cad和效果图
+  * 所有饰面通选（无造型的）
+  * 大亚精板
+
 ## 实木家具
 
 木材分硬木和软木，常见的黑胡桃、樱桃木等都是硬木。成品家具尽量用硬木。
