更新 灯光选择.md

--- a/灯光选择.md
+++ b/灯光选择.md
@@ -101,5 +101,13 @@
 
 * 洗墙射灯不是很建议，容易直接显示出墙面的瑕疵，比如不平等问题。可以在天花顶部安装漫反射灯带
 
+## 价格参考
+
+* 新特丽
+  * 显指92
+  * 筒灯100多，射灯300多，灯带带型材180/m
+  * 色容差不知道，估计很高
+
+
 
 
