更新 灯光选择.md

--- a/灯光选择.md
+++ b/灯光选择.md
@@ -107,7 +107,16 @@
   * 显指92
   * 筒灯100多，射灯300多，灯带带型材180/m
   * 色容差不知道，估计很高
-
+  * 解放碑店有检测设备
+* 西顿 南坪灯
+  * 显指挺高90以上吧
+  * 射灯一百多？也有三百多的，可以接华为智能，散热更好
+  * 灯带58一米不含灯槽，光衰10米
+  * 色容差宣传2以下
+* 木林森 南坪灯西顿店内
+  * 宣传显指95，r9>96，色容差2以下
+  * 线形灯光衰10米20米，十几块一米
+  * 好的射灯一百多一个，一般的60多？
 
 
 
