更新 灯光选择.md

--- a/灯光选择.md
+++ b/灯光选择.md
@@ -115,9 +115,10 @@
   * 灯带58一米不含灯槽，光衰10米
   * 色容差宣传2以下
 * 木林森 南坪灯西顿店内
-  * 宣传显指95，r9>96，色容差2以下
+  * 灯带宣传显指95，r9>96，色容差2以下
   * 线形灯光衰10米20米，十几块一米
   * 好的射灯一百多一个，一般的60多？
+  * 灯带十几块一米不含灯槽
 
 
 
