--- a/灯光选择.md
+++ b/灯光选择.md
@@ -117,7 +117,7 @@
 * 木林森 南坪灯西顿店内
   * 灯带宣传显指95，r9>96，色容差2以下
   * 线形灯光衰10米20米，十几块一米
-  * 好的射灯一百多一个，一般的60多？
+  * 好的射灯120多一个，一般的60多？
   * 灯带十几块一米不含灯槽
 
 
