更新 灯光选择.md

--- a/灯光选择.md
+++ b/灯光选择.md
@@ -119,6 +119,11 @@
   * 线形灯光衰10米20米，十几块一米
   * 好的射灯120多一个，一般的60多？
   * 灯带十几块一米不含灯槽
-
+* 欧曼 南坪灯
+  * 灯带顶配21一米，嵌入式灯槽10一米
+  * ra95
+* 雷尼司 南坪灯
+  * ra95
+  * 射灯一百多
 
 
