更新 木材选择.md

--- a/木材选择.md
+++ b/木材选择.md
@@ -124,6 +124,13 @@
 * 黑胡桃：比上面的软，其他都很好，价格特别贵
 * 黑檀木：没有一个木材学名叫黑檀木，商家这么称呼基本就是杂木刷黑了
 
+## 价格参考
+* 林氏木业 南坪红
+  * 红橡餐桌1米6，2千5左右
+  * 白蜡床1米8，2千7？
+  * 白蜡床头柜，700一个
+  * 红橡办公桌，1米2，一千2左右
+
 ## 木地板
 
 由顶层和下层的不同的排列组合构成不同的木地板。初步定新三层或者预算不够强化复合，因为好打理
