更新 木材选择.md

--- a/木材选择.md
+++ b/木材选择.md
@@ -123,6 +123,7 @@
 * 硬枫木：硬度高，纹理好看，颜色很浅
 * 黑胡桃：比上面的软，其他都很好，价格特别贵
 * 黑檀木：没有一个木材学名叫黑檀木，商家这么称呼基本就是杂木刷黑了
+* 白橡有点黄，有点深，红橡纹路粗犷，白蜡很白，纹路浅浅的，红橡便宜一些但总体差价不大
 
 ## 价格参考
 * 林氏木业 南坪红
@@ -130,6 +131,9 @@
   * 白蜡床1米8，2千7？
   * 白蜡床头柜，700一个
   * 红橡办公桌，1米2，一千2左右
+* 源氏木语 南坪红
+  * 白橡餐桌带6椅子 5550的样子
+  * 白蜡桌带6 5255
 
 ## 木地板
 
