更新 木材选择.md

--- a/木材选择.md
+++ b/木材选择.md
@@ -134,8 +134,10 @@
 * 源氏木语 南坪红
   * 白橡餐桌带6椅子 5550的样子
   * 白蜡桌带6 5255
-  * 白蜡床3700
+  * 白蜡床1803700
   * 床头柜白蜡900一个450宽
+  * 红橡办公桌140，1900
+  * 红橡床150，2900
 
 ## 木地板
 
