--- a/木材选择.md
+++ b/木材选择.md
@@ -11,12 +11,15 @@
 颗粒由小到大排列：
 * 密度板：好造型，局部使用好看，遇水膨胀
 * 颗粒板（刨花板、几乎每个品牌名字都不同，本质是颗粒板）：专业品牌多，寿命稳定长，握钉力强，但不防水，不好造型。颗粒中间大两边小的最好，颗粒材质要好的
-* 多层板：防水性能最好
+* 多层板：很多层木板粘接成的，每一层木板都是木头压成的板，所以密度比较大，防水性能好
+* 大芯板：中间是宽几厘米的木方横着粘接起来的板材，应该是用的软木，所以容易吸水
 * 生态板（生态板=大芯板+饰面）：最方便木工现场造型，但握钉力差，做柜体不如颗粒板稳定，适合做窗帘盒什么的现场活
 * 指接板：最接近实木，贵，环保性最好
 ![](./img/%E5%9B%9B%E7%A7%8D%E6%9D%BF%E6%9D%90.jpg)
   
-水最深的就是颗粒板
+#### 注
+
+* 大芯板要里面没有腐木，结巴的为好，无刺激性气味的好
 
 性能表格
 | 维度     | 环保                 | 形变                 | 握钉力               | 防潮               | 外观               | 价格                 |
