--- a/木材选择.md
+++ b/木材选择.md
@@ -135,8 +135,8 @@
   * 白蜡床头柜，700一个
   * 红橡办公桌，1米2，一千2左右
 * 源氏木语 南坪红
-  * 白橡餐桌带6椅子 5550的样子
-  * 白蜡桌带6 5255
+  * 白橡餐桌带6椅子1m6 5550的样子
+  * 白蜡桌1m6带6椅子 5255
   * 白蜡床1803700
   * 床头柜白蜡900一个450宽
   * 红橡办公桌140，1900
