更新 木材选择.md

--- a/木材选择.md
+++ b/木材选择.md
@@ -128,7 +128,14 @@
 * 黑檀木：没有一个木材学名叫黑檀木，商家这么称呼基本就是杂木刷黑了
 * 白橡有点黄，有点深，红橡纹路粗犷，白蜡很白，纹路浅浅的，红橡便宜一些但总体差价不大
 
+## 表面处理
+
+* 水性漆：料加工成本和木蜡油差不多，能显示原木本身的样子，透明的，环保能过关，漆成本低，人工费贵
+* 油性漆：带颜色，环保好像不过关
+* 木蜡油：很环保，但是容易掉，需要定期重新上，油成本高，人工费便宜
+
 ## 价格参考
+
 * 林氏木业 南坪红
   * 红橡餐桌1米6，2千5左右
   * 白蜡床1米8，2千7？
