--- a/木材选择.md
+++ b/木材选择.md
@@ -138,7 +138,7 @@
   * 白橡餐桌带6椅子1m6 5550的样子
   * 白蜡桌1m6带6椅子 5255
   * 白蜡床1803700
-  * 床头柜白蜡900一个450宽
+  * 床头柜白蜡900一个45厘米宽
   * 红橡办公桌140，1900
   * 红橡床150，2900
 
