--- a/基装注意事项.md
+++ b/基装注意事项.md
@@ -1,5 +1,12 @@
 # 基装注意事项
 
+## 墙
+
+* 分为混凝土墙（承重墙）和水泥砂浆墙（非承重墙）
+* 混凝土墙是承重用的，不能拆，但表面几厘米以及无钢筋的梁处可以打掉，以穿空调孔或水电开槽
+
+## 费用
+
 * 拆墙、除渣、除渣三项费用是单独算的，拆墙不贵，一般120cm的墙30+，240cm的墙4、50块一平方，但是除渣很贵，要拉到很远的地方去。除渣一般按车算，一车几百元。
 
 ## 弱电箱是否换新
@@ -25,3 +32,12 @@
 ![](./img/%E5%8D%AB%E7%94%9F%E9%97%B4%E5%A4%96%E9%98%B2%E6%B0%B4.jpg)
 * 卫生间回填不能用建渣，时间长了会塌，从而拉裂防水瓷砖地面。
 * 回填性价比用碳渣，但是碳渣一旦漏水容易一直潮湿。最好使用陶粒回填，做二次防水
+
+### 防水材料
+
+* 直接买柔性防水国标II型，墙面和地面全用这个，粘接强度0.7MPa，足够粘任何瓷砖了
+
+## 墙面
+
+* 成品的乳胶漆墙面从钢筋开始有很多层，分别是：钢筋->水泥砂浆->界面剂（墙固）->腻子->底漆->面漆
+* 成品的瓷砖墙：钢筋->水泥砂浆->界面剂（墙固）->腻子->底漆->面漆
