'增加线管锁扣'

--- a/基装注意事项.md
+++ b/基装注意事项.md
@@ -24,6 +24,8 @@
 * 强电弱电间隔15cm，不能同槽
 * 地面两点一线或横平竖直都可以，看预算，横平竖直更规范。
 * 墙面绝对要横平竖直
+* 电线盒子和电线管接头处要用线管锁扣连接，否则有空隙，有漏电风险
+![](./img/%E7%BA%BF%E7%AE%A1%E9%94%81%E6%89%A3.jpg)
 
 ## 防水卫生间
 
