'增加二次排水相关'

--- a/基装注意事项.md
+++ b/基装注意事项.md
@@ -34,6 +34,8 @@
 ![](./img/%E5%8D%AB%E7%94%9F%E9%97%B4%E5%A4%96%E9%98%B2%E6%B0%B4.jpg)
 * 卫生间回填不能用建渣，时间长了会塌，从而拉裂防水瓷砖地面。
 * 回填性价比用碳渣，但是碳渣一旦漏水容易一直潮湿。最好使用陶粒回填，做二次防水
+* 二次排水最好用专门的简二排
+![](./img/%E7%AE%80%E4%BA%8C%E6%8E%92.jpg)
 
 ### 防水材料
 
