--- a/基装注意事项.md
+++ b/基装注意事项.md
@@ -22,6 +22,7 @@
 * 热水管包保温棉
 * 水电管不能同槽，有可能漏水导致漏电
 * 强电弱电间隔15cm，不能同槽
+* 强弱电如果有交叉不可避免，要在弱点管上包一圈铝箔纸防电磁干扰
 * 地面两点一线或横平竖直都可以，看预算，横平竖直更规范。
 * 墙面绝对要横平竖直
 * 电线盒子和电线管接头处要用线管锁扣连接，否则有空隙，有漏电风险
