'完善文档和家里尺寸'

--- a/卫生间设计.md
+++ b/卫生间设计.md
@@ -9,17 +9,16 @@
 * 蹲便器
 * 似乎无法干湿分区
 * 因为太小，淋浴区不够90cm，只能用浴帘扩大空间
-* 干湿不分区如何保障水不流到客厅？
+* 干湿不分区如何保障水不流到客厅？做挡水坝，门口用通体过门石
 * 要带镜灯的镜柜
+* 柜子下水做90°墙排
 * 镜柜高度不能太低，否则会开门会碰到电动牙刷等东西
 * 下沉只有300
 
-## 主卧卫生间
+## 主卫
 
 * 马桶
 * 更大的储物空间
-
-# 便器选择
 
 ## 蹲便器
 
@@ -37,12 +36,25 @@
 
 ## 存水弯
 
+* 存水弯一般是110管，要算尽蹲便器高度里
 * 下水处必须要存水弯，否则会反臭
 * 开发商带了存水弯的话，便器下面就不用存水弯了，否则就要买带存水弯的便器
 
 ## 包落水管
 
 * 砖砌包管，要留检修口，以防堵塞
+
+## 淋浴区地台
+
+* 下沉2cm
+* 侧边瓷砖条收口
+* 大砖通铺搭配圆形多圆孔面板，侧开排水地漏
+
+## 水管
+
+* 水管角阀的水嘴在水电施工后不要让水电工固定，瓦工厕所贴砖后，根据贴砖高度再固定水嘴，确保贴完瓷砖后水嘴与墙面平行或水嘴高出瓷砖1-2mm，避免内凹或突出太多。
+* 安装角阀前，在瓷砖和水嘴接缝处打一圈密封胶
+* 用好点的角阀
 
 ## 花洒
 
@@ -54,6 +66,10 @@
 * 龙头主体材质：要铜/精铜/59A精铜，不要纯铜以外的材料
 * 花洒软管不要不锈钢多段的，容易积水垢，要pvc软管的
 * 花洒出水孔要液态硅胶孔的，容易清理不易堵塞
+
+## 验收时
+
+* 验收地面时不要用水测卫生间地面坡度，因为还没做美缝，水会渗漏进瓷砖下方，要用玻璃珠做测试。
 
 ## 价格参考
 
