--- a/基装注意事项.md
+++ b/基装注意事项.md
@@ -27,6 +27,7 @@
 * 墙面绝对要横平竖直
 * 电线盒子和电线管接头处要用线管锁扣连接，否则有空隙，有漏电风险
 ![](./img/%E7%BA%BF%E7%AE%A1%E9%94%81%E6%89%A3.jpg)
+* 装修中水龙头最好配个水管，后期油工要大量用水，没有水管的话水容易溅到瓷砖下面去，影响美缝。
 
 ## 防水卫生间
 
