--- a/辅材选择.md
+++ b/辅材选择.md
@@ -30,3 +30,14 @@
 * 不适用于粗糙表面，最适合在金属、塑料、玻璃等平滑的表面上
 * 户外型号不适合用在室内，因为有挥发性物质
 * 使用有一定难度
+
+## 地漏
+
+由面板、地漏芯组成
+
+* 地漏芯密封方式：侧开、铅坠翻板、t型弹簧、硅胶、深水封
+* 面板样式：圆形多圆孔、方形栅格、凹槽隐形、洗衣机专用二合一
+* 地漏芯堵头发：侧开最不容易堵，铅坠翻版次之，硅胶、t型弹簧、深水封最容易堵
+* 面板易清洁程度：凹槽隐形清理最麻烦，其他好点
+* 最好的是圆形多圆孔+侧开地漏芯的地漏
+
