--- a/瓷砖选择.md
+++ b/瓷砖选择.md
@@ -23,12 +23,17 @@
 * 验收瓷砖时用硬币在四个角转一下，不能卡住，卡住说明没有找平
 * 海棠角要包进贴砖钱里面，很多公司把它算成增项，而且很贵
 * 贴砖的时候要用水平仪打激光，以防贴出来不方，从而有缝
+* 不能用海沙，要用河沙，海沙会长真菌
 
 ## 选购要点
 
-* 胚体：瓷砖背面，地砖要瓷质砖，吸水率小于0.5%，倒水上去不会吸收，砖立起来弹一下中间，有铜钟一样的声音。
-* 釉面：瓷砖正面，防滑系数要在0.5以上
-* 平整度：两块瓷砖正对正贴一起，看看能不能贴死，左右排列一起，看看接缝处整不整齐  
+* 胚体：瓷砖背面，地砖要瓷质砖，吸水率小于0.5%，倒水上去不会吸收，砖立起来弹一下中间，有铜钟一样的声音；胚体颜色洁白无杂质
+* 釉面：瓷砖正面，防滑系数要在0.5以上；用刀子钥匙画不出道道
+* 平整度：两块瓷砖正对正贴一起，看看是不是能贴死，边角有没有翘起来；左右排列一起，看看接缝处整不整齐；
+* 尺寸公差：测量砖的两条对角线，看相不相等；四块砖排一起，边角能完全对齐
+* 防污性：用油性马克笔写上去，等干了擦一下看好不好擦
+* 防滑性：倒水上去，用脚兹几下，看看滑不滑，好的砖都不滑
+
 不要管砖的名称，太多了而且没有规范，认不完的，要关注砖的各种性能。
 防滑性高了，防污渗水能力就差了，本质上是砖表面的平整度和孔洞多少。
 硬度，跟店里高档的瓷砖硬度对比，不要差太多就行。没必要用钥匙什么的去划。
