更新 石材选择.md

--- a/石材选择.md
+++ b/石材选择.md
@@ -16,3 +16,10 @@
 * 厚度1.5cm以上的，要注意是石英石厚度不是边缘折下来的高度
 * 检验质量的方法：用打火机烧不变黑、小刀钥匙划不出伤、水性笔不渗色
 * 台下盆和尺寸要在工厂切割，不要让工人现场做。
+
+## 门槛石
+
+* 用天然石材，花岗石或大理石
+* 花岗石耐磨一些，价格差别不大
+* 卫生间门口的门槛石要磨边
+* 大理石长了还要加筋
