'完善门窗相关'

--- a/家里尺寸.md
+++ b/家里尺寸.md
@@ -3,11 +3,12 @@
 * 总面积：31.2994+6.438+15.719+7.367+7.668+9.551+3.09+3.765+2.797+1.143=88.83
 * 半面积：6.438+1.143+2.384+1.984+2.068+3.099=17.116
 
-依据：![](./%E5%AE%B6%E9%87%8C%E5%B0%BA%E5%AF%B8.jpg)
+依据：![](./装修资料/家里尺寸.jpg)
 
 ## 客厅
 
 * 面积：24.578+1.2474（卧室过道）+3.835（玄关）+1.639（厕所门口）=31.2994
+* 窗户面积：(1.27+1.27+5.07)*2.3=17.503
 
 ## 阳台
 
