--- a/窗户选择.md
+++ b/窗户选择.md
@@ -9,7 +9,7 @@
 
 系统门窗是有国标的
 
-## 推拉窗
+## 平开窗
 
 * 两个导轨外低内高，用于挡水，可以在内部有一个挡水板
 * 内开内倒
@@ -26,10 +26,12 @@
   * C型条隔热最好、更易排水
   * T型是I型的改进，让断桥铝形成“等温线齐平”
   * 空腔条是最终形态，应该最贵，各项性能都是最佳
+* 隔热条越宽隔热性能越好
+* 玻璃间隔条是铝条或各种品牌的暖边条，暖边条一般是密封玻璃，保存氩气效果更好，整体性能更好
 * 铝条插角工艺，要一体弯折的，不要拼接的，拼接的容易漏气
-* 多腔体工艺，腔体越多隔热越好
+* 多腔体工艺，腔体越多窗户越稳定，和保温性没关系
 ![](./img/%E5%A4%9A%E8%85%94%E4%BD%93.jpg)
-* 氟碳漆喷涂更好，更耐磨好看，粉末喷涂工艺是撇得
+* 氟碳漆喷涂更好，更耐磨好看，粉末喷涂工艺是撇的
 * 中间隔热条在关闭状态一定要封住，否则没有任何隔热效果
 ![](./img/%E5%AF%86%E5%B0%81%E6%9D%A1%E5%AF%86%E5%B0%81.jpg)
 ![](./img/%E5%AF%86%E5%B0%81%E6%9D%A1%E6%9C%AA%E5%AF%86%E5%B0%81.jpg)
@@ -62,9 +64,9 @@
 
 * 三元乙丙密封条
 
-## 边条
+## 玻璃间隔条
 
-指两块玻璃中间的那个边条，最常见的材质是铝条
+指两块玻璃中间的那个间隔条，最常见的材质是铝条
 
 * 一般使用的是铝制的边条，一体折弯工艺的。铝条也称为冷边条
 * 要想保温性能好，应该使用暖边条，暖边条种类很多，只要导热系数小于0.007的都是暖边条
@@ -84,9 +86,28 @@
 * 有的商家做假注胶
 参考：[销钉注胶角码](https://zhuanlan.zhihu.com/p/581503229)
 
+## 保温性能
+
+国家有窗户保温性能的检测，好的商家做了保温检测看他的报告上的保温等级
+![](./img/窗户保温性能分级.jpg)
+
 ## 安装
 
 * 安装在滴水线以内3cm以上
 * 固定片固定和膨胀螺丝固定，膨胀螺丝不能用塑料的，得用铁的
 * 膨胀螺丝不能打在隔热条上
 * 安装完了要打密封胶
+
+## 重庆标准
+参考
+
+* 《民用建筑外门窗应用技术标准》DBJ50/T-065-2020
+* 《居住建筑节能65%（绿色建筑）设计标准》DBJ50-071-2020
+
+要求
+
+* 型材宽度：平开65以上，推拉80以上
+* 型材壁厚：窗户1.8mm，门型2.0mm
+* 隔热条宽度：24mm以上
+* 玻璃厚度：中空玻璃5mm以上
+* K值≤2.2
