更新 灯光选择.md

--- a/灯光选择.md
+++ b/灯光选择.md
@@ -11,6 +11,8 @@
 
 中山是中国的灯城
 
+灯由灯具、驱动、芯片构成
+
 筒灯就是普通的圆筒上面挂个灯；射灯是灯周围用镜面反射改变光的方向，达到让光照向一个方向的作用。
 ![](./img/%E7%AD%92%E7%81%AF%E5%B0%84%E7%81%AF.jpg)
 
@@ -27,6 +29,13 @@
 * LED灯带：一般是一米120个灯珠，亮度比COB亮一些
 * COB灯带：整个灯带是一根连续的，出光更柔和，但是放白色灯罩内几乎看不出来差别
 ![](img/%E7%81%AF%E5%B8%A6%E5%93%81%E7%B1%BB.jpg)
+
+### 驱动
+
+* 莱福德：好用不贵
+* 伊戈尔：好用不贵
+* 飞利浦：更好用，更贵
+* 瑞高：奥地利牌子，最贵最好用
 
 ## 购买渠道
 
