--- a/基装注意事项.md
+++ b/基装注意事项.md
@@ -22,20 +22,21 @@
 * 热水管包保温棉
 * 水电管不能同槽，有可能漏水导致漏电
 * 强电弱电间隔15cm，不能同槽
-* 强弱电如果有交叉不可避免，要在弱点管上包一圈铝箔纸防电磁干扰
+* 强弱电如果有交叉不可避免，要在弱电管上包一圈铝箔纸防电磁干扰
 * 地面两点一线或横平竖直都可以，看预算，横平竖直更规范。
 * 墙面绝对要横平竖直
 * 电线盒子和电线管接头处要用线管锁扣连接，否则有空隙，有漏电风险
 ![](./img/%E7%BA%BF%E7%AE%A1%E9%94%81%E6%89%A3.jpg)
-* 装修中水龙头最好配个水管，后期油工要大量用水，没有水管的话水容易溅到瓷砖下面去，影响美缝。
+* 装修过程中水龙头最好配个水管，后期油工要大量用水，没有水管的话水容易溅到瓷砖下面去，影响美缝。
 
-## 防水卫生间
+## 卫生间防水
 
-* 厨房角阀出水口周边要先用堵漏剂涂刷，再刷防水
+* 角阀出水口周边要先用堵漏剂涂刷，再刷防水
 * 卫生间的防水要做到出门拐上墙50cm，地面也要往外50cm
 ![](./img/%E5%8D%AB%E7%94%9F%E9%97%B4%E5%A4%96%E9%98%B2%E6%B0%B4.jpg)
-* 卫生间回填不能用建渣，时间长了会塌，从而拉裂防水瓷砖地面。
-* 回填性价比用碳渣，但是碳渣一旦漏水容易一直潮湿。最好使用陶粒回填，做二次防水
+* 卫生间回填材料有建渣（最便宜，但是要好好处理）、碳渣（性价比最高）、陶粒（贵20%）、发泡水泥（贵40%，也叫回填宝）
+* 建渣回填要先处理成尽量小块的，而且要去掉其中尖锐的铁块、塑料之类的东西，尽量保留更纯的砖块，否则会刺破防水；管道要先用红砖包起来，防止被建渣刺破；防水层可以先用水泥抹一层，上面再放建渣，就不会刺破防水。
+* 碳渣吸潮，如果漏水短时间发现不了；陶粒工艺复杂
 * 二次排水最好用专门的简二排
 ![](./img/%E7%AE%80%E4%BA%8C%E6%8E%92.jpg)
 
