--- a/家里尺寸.md
+++ b/家里尺寸.md
@@ -2,12 +2,16 @@
 
 * 总面积：31.2994+6.438+15.719+7.367+7.668+9.551+3.09+3.765+2.797+1.143=88.83
 * 半面积：6.438+1.143+2.384+1.984+2.068+3.099=17.116
+* 总柜子投影面积（高按2.5m算）：3.9875+2.425+5.9375+3.975=16.325
+* 总橱柜投影面积：
 
 依据：![](./装修资料/家里尺寸.jpg)
 
 ## 客厅
 
 * 面积：24.578+1.2474（卧室过道）+3.835（玄关）+1.639（厕所门口）=31.2994
+* 鞋柜面积：1.595*2.5（预估高度）=3.9875
+* 卫生间外柜面积：0.97*2.5 = 2.425
 
 ## 阳台
 
@@ -21,6 +25,7 @@
 ## 主卧
 
 * 面积：11.83+0.663（次卧墙壁差）+0.842（主卧进门）+2.384（飘窗）=15.719
+* 柜子面积：2.375*2.5（预估高度）= 5.9375
 
 ## 多功能房
 
@@ -29,6 +34,7 @@
 ## 次卧
 
 * 面积：5.6+2.068（飘窗）=7.668
+* 柜子面积：1.59*2.5（预估高度）= 3.975
 
 ## 厨房
 
