更新 木材选择.md

--- a/木材选择.md
+++ b/木材选择.md
@@ -112,6 +112,13 @@
   * 免费出cad和效果图
   * 所有饰面通选（无造型的）
   * 大亚精板
+* 蒂梵 重庆的厂
+  * 衣柜600一平，千山enf，柜体柜门一样
+  * pur封边
+  * 标配海蒂诗五金
+  * 拉直器100+
+  * 灯光开槽10一米
+  * 橱柜950一米，包含石英台面
 
 ## 实木家具
 
