--- a/工艺注意事项.md
+++ b/工艺注意事项.md
@@ -15,14 +15,16 @@
 
 ## 墙砖铺贴
 
-* 干挂法：
-* 薄贴法：用瓷砖胶（不是瓷砖背胶）粘
+* 薄贴法：用瓷砖胶（不是瓷砖背胶）薄贴（不能厚贴）
+* 拉毛+水泥砂浆：可以做到与建筑同寿
+* 干挂法：一般不用
 
 ## 墙面拉毛
 
 由于混凝土墙面太过于光滑，瓷砖贴在上面力度不够，容易掉，所以要增加墙面的粗糙度。必须要保证墙面特别粗糙且用工具铲墙都一点不掉灰，方可开始贴墙砖。  
 操作方法是用瓷砖粘接剂加墙固，混合后刷上墙，干透后很粗糙并且不会掉灰，反正让墙面凹凸不平就行。  
-一般刷过防水后需要拉毛，因为防水涂料上特别光滑
+一般刷过防水后需要拉毛，因为防水涂料上特别光滑  
+拉毛水泥要用425水泥，不要用325水泥，贴砖才用325水泥，425干的太快了
 
 ## 地面找平
 
@@ -37,3 +39,11 @@
 ## 墙压地，地压墙
 
 指的是墙砖和地砖接缝处采取墙砖最下方在地砖上面（墙压地）还是墙砖最下方在地砖旁边（地压墙）的做法。纠结这个没意义，因为这个缝处肯定要填美缝剂，填完了就没有缝了。
+
+## 水电横槽
+
+最好不要开横槽，包括承重墙和非承重墙。国标规定承重墙横槽不超过30cm，非承重墙不超过50cm，所以最好是别开横槽。水电走天或走地，墙上的部分用竖槽连过去
+
+## 厨房台面挡水条
+
+不要挡水条要求瓷砖这面墙贴的够平，这样才能和台面对齐。可以以此为要求筛选装修队。
