--- a/瓷砖选择.md
+++ b/瓷砖选择.md
@@ -27,7 +27,7 @@
 
 ## 选购要点
 
-* 胚体：瓷砖背面，地砖要瓷质砖，吸水率小于0.5%，倒水上去不会吸收，砖立起来弹一下中间，有铜钟一样的声音；胚体颜色洁白无杂质
+* 胚体：瓷砖背面，地砖要瓷质砖，吸水率小于0.5%，倒水上去不会吸收，砖立起来弹一下中间，有铜钟一样的声音；胚体颜色洁白无杂质；背面滴墨水，不渗透才是低吸水率（低于千分之三）的
 * 釉面：瓷砖正面，防滑系数要在0.5以上；用刀子钥匙画不出道道
 * 平整度：两块瓷砖正对正贴一起，看看是不是能贴死，边角有没有翘起来；左右排列一起，看看接缝处整不整齐；
 * 尺寸公差：测量砖的两条对角线，看相不相等；四块砖排一起，边角能完全对齐
