--- a/家电选择.md
+++ b/家电选择.md
@@ -70,6 +70,11 @@
 ## 冰箱
 
 * 容量选择：一个人100L
+* 除菌净味技术可以认为全没用。什么EPP、臭氧除菌、光触媒，全没用。
+* 循环数和系统数用处不大，不如大品牌温控调校更好的
+* 能效等级一到五数字越小越好
+* 选购看升数、开门方式、嵌入式（左右预留空间多少）、是否超薄，品牌就行
+
 海尔
 
 * 开门方式：十字门、法式（有抽屉）、对开门
