--- a/瓷砖选择.md
+++ b/瓷砖选择.md
@@ -75,6 +75,17 @@
 4. 聚脲：主成分天冬聚脲。耐污性很强。
 
 * 价格：1&lt;2&lt;3&lt;4
+* 价格合适的话可以选择聚脲
+
+实例：
+* lyn全屋聚脲花了不到一千
+
+国标：  
+* JC/T 1004-2017 陶瓷砖填缝剂
+![](./img/陶瓷砖填缝剂分类.jpg)
+水泥基填缝剂很便宜施工也便宜，但是一定要买CG2WA标准的，要不然会吸水报废。
+* JC/T 2435-2018 单组分聚脲防水涂料
+聚脲的国标，理化性能是有规定的，但是本质上是防水材料用在填缝上，是一种尝试。
 
 ## 重庆选购地点
 
