--- a/基装注意事项.md
+++ b/基装注意事项.md
@@ -24,7 +24,7 @@
 * 强电弱电间隔15cm，不能同槽
 * 强弱电如果有交叉不可避免，要在弱电管上包一圈铝箔纸防电磁干扰
 * 地面两点一线或横平竖直都可以，看预算，横平竖直更规范。
-* 墙面绝对要横平竖直
+* 墙面不能开横槽，开不能超过30cm
 * 电线盒子和电线管接头处要用线管锁扣连接，否则有空隙，有漏电风险
 ![](./img/%E7%BA%BF%E7%AE%A1%E9%94%81%E6%89%A3.jpg)
 * 装修过程中水龙头最好配个水管，后期油工要大量用水，没有水管的话水容易溅到瓷砖下面去，影响美缝。
