--- a/重庆建材市场列表.md
+++ b/重庆建材市场列表.md
@@ -8,7 +8,7 @@
 * 渝北红星美凯龙至尊mall：轻轨站重光
 * 国博红星美凯龙：轻轨站国博中心
 * 大渡口居然之家：轻轨站天堂堡
-* 北滨路居然之家：化龙桥对面金源时代
+* 北滨路居然之家：化龙桥河对面金源时代
 * 花卉园居然之家：轻轨站花卉园
 * 园博园居然之家：轻轨站园博园
 * 凯恩国际：轻轨站八公里
@@ -16,3 +16,4 @@
 * 八一建材市场：轻轨站石新路
 * 马家岩建材城：轻轨站天星桥
 * 龙溪建材市场：轻轨站花卉园
+* 京东线下体验店：轻轨保税港站
