更新 基装注意事项.md

--- a/基装注意事项.md
+++ b/基装注意事项.md
@@ -34,7 +34,7 @@
 * 角阀出水口周边要先用堵漏剂涂刷，再刷防水
 * 卫生间的防水要做到出门拐上墙50cm，地面也要往外50cm
 ![](./img/%E5%8D%AB%E7%94%9F%E9%97%B4%E5%A4%96%E9%98%B2%E6%B0%B4.jpg)
-* 卫生间回填材料有建渣（最便宜，但是要好好处理）、碳渣（性价比最高）、陶粒（贵20%）、发泡水泥（贵40%，也叫回填宝）
+* 卫生间回填材料有建渣（最便宜，但是要好好处理）、碳渣（性价比最高）、陶粒（贵20%）、发泡水泥（贵40%，也叫回填宝）。现在装修基本默认回填宝
 * 建渣回填要先处理成尽量小块的，而且要去掉其中尖锐的铁块、塑料之类的东西，尽量保留更纯的砖块，否则会刺破防水；管道要先用红砖包起来，防止被建渣刺破；防水层可以先用水泥抹一层，上面再放建渣，就不会刺破防水。
 * 碳渣吸潮，如果漏水短时间发现不了；陶粒工艺复杂
 * 二次排水最好用专门的简二排
