更新 基装注意事项.md

--- a/基装注意事项.md
+++ b/基装注意事项.md
@@ -7,7 +7,7 @@
 
 ## 费用
 
-* 拆墙、建墙、除渣三项费用是单独算的，拆墙不贵，一般120cm的墙30+，240cm的墙4、50块一平方，但是除渣很贵，要拉到很远的地方去。除渣一般按车算，一车几百元。
+* 拆墙、建墙、除渣三项费用是单独算的，拆墙不贵，一般120mm厚度的墙30+，240mm的墙4、50块一平方，但是除渣很贵，要拉到很远的地方去。除渣一般按车算，一车几百元。
 
 ## 弱电箱是否换新
 
