更新 基装注意事项.md

--- a/基装注意事项.md
+++ b/基装注意事项.md
@@ -17,10 +17,9 @@
 ## 水电注意事项
 
 * 水走天电走地
-* 天上的电线要比水管高
 * 冷水管比热水管高
 * 热水管包保温棉
-* 水电管不能同槽，有可能漏水导致漏电
+* 水电管不能同槽，否则可能漏电
 * 强电弱电间隔15cm，不能同槽
 * 强弱电如果有交叉不可避免，要在弱电管上包一圈铝箔纸防电磁干扰
 * 地面两点一线或横平竖直都可以，看预算，横平竖直更规范。
