更新 基装注意事项.md

--- a/基装注意事项.md
+++ b/基装注意事项.md
@@ -4,6 +4,7 @@
 
 * 分为混凝土墙（承重墙）和水泥砂浆墙（非承重墙）
 * 混凝土墙是承重用的，不能拆，但表面几厘米以及无钢筋的梁处可以打掉，以穿空调孔或水电开槽
+* 墙固地固不要进场就刷，要在油工前几天刷。因为水电开槽，铺砖等工序会让墙固表面沾上很多灰尘，前面刷的白刷了
 
 ## 费用
 
