更新 家电选择.md

--- a/家电选择.md
+++ b/家电选择.md
@@ -145,6 +145,7 @@
 * 零冷水：随时水龙头打开立即出热水，要预埋回水管。热水管道长的更需要零冷水。不是特别需要
 * 瀑布浴：出水口有一个增压泵，水压不够则可以增压。没太大用
 * 一级能效：燃气燃烧的热量97%以上全变成水温，节能。只有上置风机才能达到一级能效。一级能效的都是冷凝机，需要排出冷凝水，不太好。
+* 美的 16m4 2999 水伺服 16l
 
 ### 品牌
 
