更新 家电选择.md

--- a/家电选择.md
+++ b/家电选择.md
@@ -131,8 +131,12 @@
 * 锅支架铸铁的便宜抗造但是易生锈，搪瓷的没铸铁抗造，但是易清洁
 * 炉头火盖选铜的，铁制最差
 * 价格不超过一千也能买到不错的，1000-2000带防干烧功能，做工好，2000+不必要了
+
 ### 价格
-* 烟机yp23 灶具q623 4599 航空材质火盖 灶5kw功率 烟机7字侧吸 蒸汽洗
+
+* 美的烟机yp23 灶具q623 4599 航空材质火盖 灶5kw功率 烟机7字侧吸 蒸汽洗
+* 老板29a9s 全纯铜 26立方 6500
+
 ## 燃气热水器
 
 * 出水量：每分钟输出升高25度的水的升数，双卫16L挺好。
