更新 家电选择.md

--- a/家电选择.md
+++ b/家电选择.md
@@ -46,9 +46,9 @@
 ## 电视
 
 * 国产TCL、海信最好，TCL有华星光电，是国产唯一能生产屏幕的
-* 电视分为LCD（液晶电视）和OLED屏幕的电视，花里胡哨名字的基本都是LCD。他们都是自发光的屏幕，但是显色原理不一样。
+* 电视分为LCD（液晶电视，商场里叫的LED就是LCD）和OLED屏幕的电视，花里胡哨名字的基本都是LCD。他们都是自发光的屏幕，但是显色原理不一样。
 
-### LCD
+### LCD(LED)
 
 * 液晶面板分A++、A+、A、B、C几个等级，等级越高坏点越少
 * IPS/ADS面板是一回事，可视角度广，硬屏，对比度低，通透性也差一些，观看效果不如VA面板。高端电视用va面板
