更新 家电选择.m

--- a/家电选择.md
+++ b/家电选择.md
@@ -120,6 +120,7 @@
 * 声压级噪音：噪音的指标，国标是73dB。要求声压级噪音+14<=73dB
 * 油脂分离度：越高对电机等部件的损耗越低。
 * 自清洗：各个厂家不一样，热干洗、高温蒸汽洗、高压水洗好于智能旋转干洗。外部面板需要自己清洗，吸力越大外面板越不容易沾油。
+* 要想安装成尽量无缝，应该先安装油烟机，再安装吊柜
 
 ### 燃气灶
 
