--- a/家电选择.md
+++ b/家电选择.md
@@ -22,7 +22,8 @@
 * 日立 牌子贵一点，东西和海信一样。海信收购了日立
 * 家博会 海尔单风扇 23000-24000
 * 大金 工厂 1拖5 4w-5w
-* lyn 美的理想家双风扇 26000 新款
+* lyn 美的理想家双风扇 26000
+* 京东线下 美的梦想家pro 26000 120 一拖四 wifi面板 京东安装
 
 ### 购买渠道
 
@@ -75,6 +76,7 @@
 * 循环数和系统数用处不大，不如大品牌温控调校更好的
 * 能效等级一到五数字越小越好
 * 选购看升数、开门方式、嵌入式（左右预留空间多少）、是否超薄，品牌就行
+* 京东上大多冰箱都是5k-6k（10月）
 
 海尔
 
