--- a/厨房设计.md
+++ b/厨房设计.md
@@ -13,6 +13,6 @@
 
 ## 厨房下水
 
-* 有油污的地方下水不能做pvc的存水弯，否则会容易被油污堵住，还要用75管。
+* 有油污的地方下水不能做pvc的存水弯，否则会容易被油污堵住，还要用75管做45度坡。
 * 厨房水槽下水一般会自带一个可拆卸的存水弯防臭装置，够用了。
 * 厨房水槽的pvc管要带点坡度
