增加洗碗机

--- a/家电选择.md
+++ b/家电选择.md
@@ -93,17 +93,32 @@
 
 海尔
 
+* 智能投放：有点用，可以根据衣服自动放洗衣液
+* 甩干转速：
+
+## 烘干机
+
+* 热风烘干
+
 ## 洗碗机
 
-美的
-
 * 清洁指数：越高清洁能力越强
-* 水压
 * 喷淋臂设计
+  * H型喷淋臂（海尔）：可以上下两向喷
+  * 上下分层洗：可以用于碗比较少的情况，稍微省点水
 * 洗涤模式
-* 除菌技术
-* 烘干技术：西门子晶蕾烘干，效果可以但是贵；开门烘干适合洗的多的情况
+  * 高能气泡洗（方太）：在喷水的时候通过文丘里管带气泡，洗涤效果很好。水压能到4万pa
+* 水压：水压越大理论上洗净能力越强，感觉4万左右够了
+  * 海尔有5万pa的
+  * 美的rx600pro基本款3万5千pa
+* 烘干技术
+  * 晶蕾烘干（西门子、博世）：一些石头遇水升温，吸水性很强，可以吸掉机器内部的水蒸气从而制造干燥的高温空气。是纯内循环，效果可以但是贵
+  * 开门烘干（美的）：洗完了自动开门，引入外面冷空气形成对流，烘干很快效果不错省电，适合洗的多的情况
+  * 热风烘干（方太）：抽外面的空气加热吹进来，效果也还行，能耗稍高
+* 除菌技术：保存技术，有的可以保存一周
 * 线下 s55 4999 热风烘干 14套 可分层洗 变频电机
+
+海尔W5000 迷瞪4900
 
 ## 烟机灶具
 
@@ -121,7 +136,7 @@
 * 止逆阀：烟机安装时要安装，防止别人的油烟灌进来
 * 声压级噪音：噪音的指标，国标是73dB。要求声压级噪音+14<=73dB
 * 油脂分离度：越高对电机等部件的损耗越低。
-* 自清洗：各个厂家不一样，热干洗、高温蒸汽洗、高压水洗好于智能旋转干洗。外部面板需要自己清洗，吸力越大外面板越不容易沾油。
+* 自清洗：各个厂家不一样，热干洗、高温蒸汽洗、高压水洗好于智能旋转干洗。外部面板需要自己清洗，吸力越大外面板越不容易沾油。本质上自清洗只是延缓拆机清洗的时间。
 * 要想安装成尽量无缝，应该先安装油烟机，再安装吊柜
 
 ### 燃气灶
