--- a/家电选择.md
+++ b/家电选择.md
@@ -14,6 +14,18 @@
 * 多联机：使用传统空调的制冷剂方式制冷，一个外机拖多个内机。不要水机，要地暖才考虑水机
 * 控制方式：类似酒店的空调面板、遥控器、无线局域网功能
 
+### 安装相关
+
+* 回风方式：尽量侧送下回，其他的都有弊端
+* 铜管：至少0.8mm
+* 冷凝水管：U-PVC材质，禁用pvc材质，易脆化
+* 内机安装：双螺母双垫片，减震，不得单螺母单垫片；丝杆采用FY10，不用普通丝杆；
+* 外机安装：橡胶减震垫
+* 工具：弯管器、胀管器、修边器、充氮保护焊
+* 排水坡度：千分之五
+* 风口软连接：国标三防布，不到国标的不行
+* 其他：直管连接用管路连接件，不能直接焊起来，可能漏氟；分歧管间距符合标准；如果有提升泵要用门字形反水弯，避免冷凝水倒流；排水走下水管不走污水管
+
 ### 价格
 
 * 家博会 美的单风扇 28000
