增加乳胶漆

--- a/乳胶漆选择.md
+++ b/乳胶漆选择.md
@@ -7,3 +7,12 @@
 * 国标：GB/T 9756-2018 合格品、一等品、优等品
 * 耐擦洗次数
 * 遮盖力（国标中的对比率）
+
+## 色彩
+
+* 分为电脑调色和手工调色。立邦有官方出的色卡，按照色卡可以直接让立邦官方调色好送来，后期补色也很方便。手工调色问题在于后期补色很难
+
+## 涂刷方法
+
+* 滚涂：省料，费时，耐擦效果更好、易修复，阴角需用毛刷补，和其他滚的地方有一点不均匀。适用于墙面造型不多的平面
+* 喷涂：废料，省时，漆面均匀，质感好，不耐擦洗，后期局部维修用滚涂可能有色差。常用于造型多的地方
