--- a/家电选择.md
+++ b/家电选择.md
@@ -140,27 +140,29 @@
 
 ### 油烟机
 
-* 侧吸：噪音大，面板容易沾油需要经常清洗，吸烟效果好，不易碰头
+* 侧吸：噪音大，面板容易沾油需要经常清洗，吸烟效果好，不易碰头。现在大部分都是侧吸
 * 顶吸：吸烟效果不好，但好看可嵌入，噪音低
-* 测顶吸：侧吸大吸力，顶吸防逃逸，贵
+* 侧顶吸：侧吸大吸力，顶吸防逃逸，贵
 * 风量：17-22立方，风量越大噪音越大
 * 风压：向烟道吹风的力量，我们几乎不用考虑
 * 止逆阀：烟机安装时要安装，防止别人的油烟灌进来
 * 声压级噪音：噪音的指标，国标是73dB。要求声压级噪音+14<=73dB
-* 油脂分离度：越高对电机等部件的损耗越低。
-* 自清洗：各个厂家不一样，热干洗、高温蒸汽洗、高压水洗好于智能旋转干洗。外部面板需要自己清洗，吸力越大外面板越不容易沾油。本质上自清洗只是延缓拆机清洗的时间。
+* 油脂分离度：滤网越密油脂分离度越高，但是越容易被凝结的油堵住。油脂分离度低了油就会附着在电机等部件上，久了对电机伤害很大。一般分离度高的品牌都有办法选密度刚好的滤网，尽量拦住油，且不会被凝结的油堵住。所以油脂分离度越高的型号一般都更好。
+* 自清洗：各个厂家不一样，热干洗、高温蒸汽洗、高压水洗好于智能旋转干洗。外部面板需要自己清洗，油脂分离度越低外面板越不容易沾油。本质上自清洗只是延缓拆机清洗的时间。
 * 要想安装成尽量无缝，应该先安装油烟机，再安装吊柜
 
 ### 燃气灶
 
-* 热效率：热效率>=59%（一级能效）
+* 热效率：热效率>=59%（一级能效），高的出一氧化碳少
 * 热负荷：因为要爆炒，所以要选4.5kW-5kW甚至更高的
 * 面板有两种：不锈钢和钢化玻璃，钢化玻璃小概率爆裂，但是易清洗
 * 天然气软管加点钱换成不锈钢的，更加耐用
-* 点火自动脉冲的不用一直按着点火
+* 点火方式：电脉冲、压电陶瓷，好点的都用电脉冲
 * 进风方式：全进风的
 * 锅支架铸铁的便宜抗造但是易生锈，搪瓷的没铸铁抗造，但是易清洁
-* 炉头火盖选铜的，铁制最差
+* 炉头火盖选铜合金的，铁制最差。铜合金最基础款式53%含铜量，含铜量越高越好
+* 火盖上的火孔：条形比圆孔的好，热效率高
+* 熄火保护：国家强制，有就行。离子感应式熄火灵敏但这玩意坏了整个灶都不能用了；热电式稳定可靠，但熄火5秒后才能停气，无安全风险。
 * 价格不超过一千也能买到不错的，1000-2000带防干烧功能，做工好，2000+不必要了
 
 ### 价格
