--- a/zx/家里尺寸.md
+++ b/zx/家里尺寸.md
@@ -4,6 +4,8 @@
 * 半面积：6.438+1.143+2.384+1.984+2.068+3.099=17.116
 * 总柜子投影面积（高按2.5m算）：3.9875+2.425+5.9375+3.975=16.325
 * 总橱柜投影面积：
+* 总木地板面积：15.719+7.668+7.367=30.754
+* 总地砖面积：31.2994+6.438+9.551+3.099+3.765+2.797=56.9494
 
 依据：![](./装修资料/家里尺寸.jpg)
 
