--- a/窗户选择.md
+++ b/窗户选择.md
@@ -104,10 +104,13 @@
 * 《民用建筑外门窗应用技术标准》DBJ50/T-065-2020
 * 《居住建筑节能65%（绿色建筑）设计标准》DBJ50-071-2020
 
-要求
+杨坤推荐
 
 * 型材宽度：平开65以上，推拉80以上
 * 型材壁厚：窗户1.8mm，门型2.0mm
-* 隔热条宽度：24mm以上
-* 玻璃厚度：中空玻璃5mm以上
-* K值≤2.2
+* 隔热条宽度：18.6mm以上
+* 发泡填充：无
+* 玻璃厚度：中空12mm，玻璃厚度5mm以上
+* 玻璃间隔条：普铝冷边
+* low-e：离线单银 辐射率ε≤0.1
+* K值≤2.5
