--- a/全屋智能方案预留.md
+++ b/全屋智能方案预留.md
@@ -1,3 +1,29 @@
 # 全屋智能
 
 普通人用的米家、绿米、华为等一套一套的智能控制都可以接入home assistant，ha可以安装在树莓派里
+
+## 生态选择
+
+* 米家生态性价比高、华为贵但稳定、ha后期折腾再上
+
+## 设备
+
+* 网关：要接网线
+
+## 灯光控制
+
+* 使用普通灯+零火智能开关的方案，需要水电时在开关里留零线
+* 单火智能开关有鬼火现象，不好
+* 普通灯缺点是不能调光调色
+* 凌动开关：类似于银行开门按钮，按下自动回位
+* 很多智能灯支持凌动模式，捕捉短时通断电实现开关切换。非智能灯不能使用凌动开关
+
+## 窗帘控制
+
+## 空调控制
+
+* 中央空调可以加一个vrf控制器，从而参与全屋智能
+
+## 其他控制
+
+* 使用智能插座，控制电脑、管线机等。可以后加
