--- a/组网方案.md
+++ b/组网方案.md
@@ -2,11 +2,11 @@
 
 mesh组网可以达成全屋一个网络的效果，否则两个路由器得有两个wlan网络
 
-## 全屋有线mesh组网
+## 全屋有线回程mesh组网
 
-* 弱电箱里放光猫
-* 弱电箱接一根网线到餐厅区，做mesh主路由
-* 由主路由连接到主卧副路由，完成全屋mesh
+* 弱电箱里放光猫以及交换机
+* 弱电箱接两根网线到电视，接主路由及回程线
+* 由弱电箱连接到主卧以及两个次卧网口，都可扩展副路由或其他设备，完成全屋mesh
 
 ## 材料选择
 
