--- a/全屋智能方案预留.md
+++ b/全屋智能方案预留.md
@@ -10,6 +10,10 @@
 
 * 网关：要接网线
 
+## 智能开关
+
+* yeelight Z1：摩呦和红星小学中队长都推荐，一百出头
+
 ## 灯光控制
 
 * 使用普通灯+零火智能开关的方案，需要水电时在开关里留零线
@@ -19,6 +23,9 @@
 * 很多智能灯支持凌动模式，捕捉短时通断电实现开关切换。非智能灯不能使用凌动开关
 
 ## 窗帘控制
+
+* 杜亚M2窗帘电机：用料扎实，杜亚是电机界的龙头老大
+* yeelight：也很不错
 
 ## 空调控制
 
