--- a/家电选择.md
+++ b/家电选择.md
@@ -8,16 +8,16 @@
 
 * 制冷量：120、140、160，指的是12000W、14000W、16000W
 * 内机p数：1p=735w输入功率，p数\*735\*能效比=制冷量
-* 提升水泵：挺有必要的，可以帮助排出冷凝水，贵不了多少
+* 提升水泵：挺有必要的，可以帮助排出冷凝水，贵不了多少。不是所有空调都可以加
 * 1拖x：一个外机x个内机
 * 外机风扇数量：影响散热速度，双风扇散热好一些
 * 多联机：使用传统空调的制冷剂方式制冷，一个外机拖多个内机。不要水机，要地暖才考虑水机
-* 控制方式：类似酒店的空调面板、遥控器、无线局域网功能
+* 控制方式：类似酒店的空调面板、遥控器、无线局域网功能。vrf控制器接入全屋智能
 
 ### 安装相关
 
 * 回风方式：尽量侧送下回，其他的都有弊端
-* 铜管：至少0.8mm
+* 铜管：至少0.8mm厚度
 * 冷凝水管：U-PVC材质，禁用pvc材质，易脆化
 * 内机安装：双螺母双垫片，减震，不得单螺母单垫片；丝杆采用FY10，不用普通丝杆；
 * 外机安装：橡胶减震垫
@@ -103,14 +103,28 @@
 
 ## 洗衣机
 
+* 冷水洗：支持冷水洗衣，对于纤维衣服有保护作用。大部分滚筒洗衣机都是热水洗的
+* 气泡洗：产生很多气泡，利用气泡爆炸的力量来清洁衣物
+* 电机：大部分都是bldc皮带变频电机，fpa直驱电机噪音更小，寿命更长。皮带电机六七年之后要更换皮带
+
 海尔
 
 * 智能投放：有点用，可以根据衣服自动放洗衣液
+* 精华洗：省水，先把水和洗衣液混合，再投入洗衣舱。传统的是在洗衣舱中浸泡混合的，混合不是很充分，洗衣效果不如预混合。
 * 甩干转速：
+
+小天鹅
+
+* 水魔方：支持冷水洗和气泡洗
+* 除菌技术：uabt紫外线银离子杀菌
 
 ## 烘干机
 
-* 热风烘干
+洗烘套装：小天鹅86+32性价比很高的时候是3000+到4000开头
+
+* 热泵烘干：是低温烘干，更护衣物，效率较高，去毛效果好，省电
+* 冷凝烘干：
+* 正反转：可以更容易抖散衣物，烘干更彻底。一般的都是8:1，海尔高端款176有1:1正反转
 
 ## 洗碗机
 
@@ -134,27 +148,30 @@
 
 ## 烟机灶具
 
-方太、老板
+方太、老板、华帝
 
 美的很多产品都是老二
 
 ### 油烟机
 
+* 新国标：GB/T 17713-2022，第一起草单位是方太
 * 侧吸：噪音大，面板容易沾油需要经常清洗，吸烟效果好，不易碰头。现在大部分都是侧吸
 * 顶吸：吸烟效果不好，但好看可嵌入，噪音低
 * 侧顶吸：侧吸大吸力，顶吸防逃逸，贵
 * 风量：17-22立方，风量越大噪音越大
-* 风压：向烟道吹风的力量，我们几乎不用考虑
+* 最大静压：向烟道吹风的力量，我们几乎不用考虑。1000pa的是好的
 * 止逆阀：烟机安装时要安装，防止别人的油烟灌进来
 * 声压级噪音：噪音的指标，国标是73dB。要求声压级噪音+14<=73dB
-* 油脂分离度：滤网越密油脂分离度越高，但是越容易被凝结的油堵住。油脂分离度低了油就会附着在电机等部件上，久了对电机伤害很大。一般分离度高的品牌都有办法选密度刚好的滤网，尽量拦住油，且不会被凝结的油堵住。所以油脂分离度越高的型号一般都更好。
-* 自清洗：各个厂家不一样，热干洗、高温蒸汽洗、高压水洗好于智能旋转干洗。外部面板需要自己清洗，油脂分离度越低外面板越不容易沾油。本质上自清洗只是延缓拆机清洗的时间。
+* 油脂分离度：滤网越密油脂分离度越高，但是越容易被凝结的油堵住。油脂分离度低了油就会附着在电机等部件上，久了对电机伤害很大。一般分离度高的品牌都有办法选密度刚好的滤网，尽量拦住油，且不会被凝结的油堵住。所以油脂分离度越高的型号一般都更好。方太老板能做90+
+* 自清洗：各个厂家不一样，热干洗、高温蒸汽洗、高压水洗好于智能旋转干洗。外部面板需要自己清洗，油脂分离度越低外面板越不容易沾油。本质上自清洗只是延缓拆机清洗的时间。方太老板根本没有自清洗，因为它们的油脂分离度比较高，不容易沾油。
 * 要想安装成尽量无缝，应该先安装油烟机，再安装吊柜
+* 工作风量：新国标提出
+* 工作噪声：新国标提出
 
 ### 燃气灶
 
 * 热效率：热效率>=59%（一级能效），高的出一氧化碳少
-* 热负荷：因为要爆炒，所以要选4.5kW-5kW甚至更高的
+* 热负荷（火力）：因为要爆炒，所以要选4.5kW-5kW甚至更高的
 * 面板有两种：不锈钢和钢化玻璃，钢化玻璃小概率爆裂，但是易清洗
 * 天然气软管加点钱换成不锈钢的，更加耐用
 * 点火方式：电脉冲、压电陶瓷，好点的都用电脉冲
