--- a/灯光选择.md
+++ b/灯光选择.md
@@ -19,8 +19,8 @@
 灯轨道是一条轨道，可以将各种灯通过磁铁吸在上面，比较好造型和diy
 
 * 色温：4000k客厅，3500k卧室
-* 功率：
-* 显色指数：Ra>95的灯具，重点关注R9，显红色，要高到和其他差不多，蓝光尽量压低一点。
+* 功率：筒射灯24V和36V，灯带12v
+* 显色指数：Ra>95的灯具，重点关注R9，显红色，要高到和其他差不多，90以上，蓝光尽量压低一点。
 * 色容差SDCM：色容差高了同样4000k会有偏色情况，要色容差小于3SDCM的比较好
 * 灯功率越高越需要散热，用久了之后发光能力会下降。冷轧钢散热好一些
 
@@ -29,13 +29,16 @@
 * LED灯带：一般是一米120个灯珠，亮度比COB亮一些
 * COB灯带：整个灯带是一根连续的，出光更柔和，但是放白色灯罩内几乎看不出来差别
 ![](img/%E7%81%AF%E5%B8%A6%E5%93%81%E7%B1%BB.jpg)
+* 用低压灯带，安全，但要注意压降的问题，四面的灯带最好是分成两条
 
-### 驱动
+### 驱动（变压器）
 
 * 莱福德：好用不贵
 * 伊戈尔：好用不贵
 * 飞利浦：更好用，更贵
 * 瑞高：奥地利牌子，最贵最好用
+* 驱动的电压要和灯带一样
+* 灯带的总功率要小于驱动功率的80%
 
 ## 购买渠道
 
@@ -66,6 +69,7 @@
 ### 基础重点氛围照明
 
 * 线性灯、铝槽灯带、磁吸轨道泛光灯、背景灯带都是基础照明的。基础照明提供室内的照亮需求即可。免吊顶反光槽可以用起来
+
 ![](./img/免吊顶反光槽.jpg)
 
 * 重点照明用SQ-36射灯、SQ-24射灯，哪里需要光就给他来个射灯。轨道灯贵，可以不要
@@ -105,6 +109,10 @@
 * 色温3500k-4000k，整个空间色温要一样
 * 功率7-9w
 * 坐沙发上不要直接看见光源，可以拿几个射灯照沙发背后过道
+
+## 安装经验
+
+* 变压器藏在吊顶内，考虑空调检修口，灯孔。留长一点驱动输出端接线，方便自由安排灯的位置
 
 ## 其他经验
 
