--- a/石材选择.md
+++ b/石材选择.md
@@ -4,10 +4,13 @@
 
 ## 材料
 
-* 石英石：便宜，硬度高，质量参差不齐，选到好的石英石很具性价比
-* 岩板：贵，密度比石英石更高，比石英石更硬，砍骨头有可能会裂，因为太脆
-* 大理石：天然石材，硬度一般，密度一般，贵，有天然的花纹，有可能有一点辐射，不建议使用
-* 岗石：硬度不够的石英石，要注意避雷
+* 人造石：
+    * 石英石：便宜，硬度高，质量参差不齐，选到好的石英石很具性价比
+    * 岗石：硬度不够的石英石，要注意避雷
+    * 岩板：贵，密度比石英石更高，比石英石更硬，砍骨头有可能会裂，因为太脆
+* 天然石：
+    * 花岗石：纹理比较单一，但耐酸碱，性能较好，比较便宜。如果花纹合适的话，某些地方可以用一点
+    * 大理石：天然石材，硬度一般，密度一般，贵，有天然的花纹，有可能有一点辐射，不建议使用
 * 不锈钢：贵，不用
 
 ### 石英石选择
@@ -25,3 +28,7 @@
 * 卫生间门口的门槛石要磨边
 * 大理石长了还要加筋
 * 龙溪建材问了一个900*220的，大理石90花岗岩80
+
+## 购买地方
+
+* 新世界建材市场：重庆市九龙坡区华园路6号 环线华龙站附近
