更新 厨房设计.md

--- a/厨房设计.md
+++ b/厨房设计.md
@@ -16,3 +16,9 @@
 * 有油污的地方下水不能做pvc的存水弯，否则会容易被油污堵住，还要用75管做45度坡。
 * 厨房水槽下水一般会自带一个可拆卸的存水弯防臭装置，够用了。
 * 厨房水槽的pvc管要带点坡度
+
+## 橱柜设计
+
+* 地柜做高低台
+* 洗切区高度为手肘高度-150mm
+* 炒菜区高度为手肘高度-230mm
