--- a/灯光选择.md
+++ b/灯光选择.md
@@ -7,6 +7,10 @@
 
 灯光设计要考虑到空间的结构性。所谓的无主灯设计核心理念就是，给每个功能区单独的灯光。所以无主灯简单的说就是给饭厅多个灯光，客厅多个灯光，门廊多个灯光。拓展一下，要利用三维立体的灯光设计，灯不一定是从顶上射到地上的，可以是横着的，漫反射出来的。
 
+## 人的感知
+
+* 感知亮度：人眼根据环境和视焦处的明暗对比调整眼球，大脑产生的感觉。不同生理状态的人，不同环境，同样的客观亮度对人的感知亮度也是不一样的。在灯光设计中需要考虑环境明暗对比度这个因素
+
 ## 灯具选择
 
 中山是中国的灯城
@@ -61,6 +65,7 @@
 * 平均照度：(总光通量\*利用系数\*维护系数)\/房屋面积
 * 灯具总光通量=基础照明光通量+重点照明光通量
 * dialux傻瓜式计算。
+* 家中任何位置亮暗对比度不超过40:1
 
 ### 设计原则
 
