--- a/厨房设计.md
+++ b/厨房设计.md
@@ -16,3 +16,15 @@
 * 有油污的地方下水不能做pvc的存水弯，否则会容易被油污堵住，还要用75管做45度坡。
 * 厨房水槽下水一般会自带一个可拆卸的存水弯防臭装置，够用了。
 * 厨房水槽的pvc管要带点坡度
+
+## 厨房器具
+
+* 熟铁炒锅：适合高温快炒爆炒，热得快，重量轻，可颠勺，但热得不均匀，离火冷得也快。不适合炒番茄鸡蛋等酸性菜，容易把油膜腐蚀了
+* 不锈钢平底煎锅：导热性好，只烧中间，四周也可以比较均匀的热起来，适合煎。用全包覆工艺，不锈钢中间夹了铝。这种锅性质稳定，什么菜都能做，还能进烤箱
+* 铸铁珐琅锅：储热性好，热得很慢，类似于砂锅。可以进烤箱，比较好看。黑珐琅（铸铁层）每次用完需要烧干、涂油；白珐琅（搪瓷层）不用，好保养一点，但是要注意品质，差的搪瓷容易碎
+* 特氟龙不粘锅：不超过250度都行，别干烧，不能用铁铲，不要做螃蟹之类的硬食材。用两三年得换
+* 不锈钢酱汁锅（小铜锅、雪平锅）：外层铜内层不锈钢，或者不锈钢夹铝的，导热快，薄，适合煮面，做酱汁
+* 油炸锅：有温度计，需要可以买
+* 黑榜：熟铁平底锅不行，熟铁这个材料就不适合平底锅；里面带格子的不锈钢不粘锅，啥啥不行
+* 收纳
+![](./img/垂直收纳锅.jpg)
