--- a/木材选择.md
+++ b/木材选择.md
@@ -14,7 +14,7 @@
 * 多层板：很多层木板粘接成的，每一层木板都是木头压成的板，所以密度比较大，防水性能好
 * 大芯板：中间是宽几厘米的木方横着粘接起来的板材，应该是用的软木，所以容易吸水
 * 生态板（生态板=大芯板+饰面）：最方便木工现场造型，但握钉力差，做柜体不如颗粒板稳定，适合做窗帘盒什么的现场活
-* 指接板：最接近实木，贵，环保性最好
+* 指接板：最接近实木，贵，环保性最好，但容易变形
 * 海洋板：符合英国海洋板标准的多层板，具有很强的防潮防晒性，握钉力也很好，功能性max
 ![](./img/%E5%9B%9B%E7%A7%8D%E6%9D%BF%E6%9D%90.jpg)
   
