--- a/瓷砖选择.md
+++ b/瓷砖选择.md
@@ -24,6 +24,7 @@
 * 海棠角要包进贴砖钱里面，很多公司把它算成增项，而且很贵
 * 贴砖的时候要用水平仪打激光，以防贴出来不方，从而有缝
 * 不能用海沙，要用河沙，海沙会长真菌
+* 地砖铺好后，要在上面铺石膏板，很便宜十来块一张，可以防止后续步骤刮伤瓷砖以及掉沙
 
 ## 选购要点
 
@@ -50,6 +51,9 @@
 
 * 方林冠珠 800略粗糙的柔光，68 4*8的柔光33
 ## 国标
+
+GB/T 4100-2015 陶瓷砖
+* 低吸水率瓷质砖，精细，A1a类，不要炻质砖
 
 ## 瓷砖店种类
 * 品牌店直营
