--- a/全屋定制选择.md
+++ b/全屋定制选择.md
@@ -11,3 +11,8 @@
 * 灯带位置：氛围灯从格子里往外8cm，展示灯（直接照到物品脸上）从外往里8cm
 * 电源位置：开在柜子后面任何地方都行，只要在装柜子之前用一根护套线将电源引导到相应位置即可
 * 明装灯槽灯带可以用斜照的 
+
+## 鞋柜
+
+* 分为常用区、备用区；常用区斜板，以放我的大鞋子；备用区可拆卸平板，可以放靴子和长筒
+* 要有一两个抽屉，放一些随时出门带的小物件
