--- a/家电选择.md
+++ b/家电选择.md
@@ -120,11 +120,12 @@
 
 ## 烘干机
 
-洗烘套装：小天鹅86+32性价比很高的时候是3000+到4000开头
+洗烘套装：小天鹅86+32性价比很高的时候是3000+到4000开头，尺寸
 
 * 热泵烘干：是低温烘干，更护衣物，效率较高，去毛效果好，省电
 * 冷凝烘干：
 * 正反转：可以更容易抖散衣物，烘干更彻底。一般的都是8:1，海尔高端款176有1:1正反转
+* 噪音大家都差不多，50-60分贝，如果衣服上有金属会撞击得很响，可以用一些小的纸包把扣子拉链包起来
 
 ## 洗碗机
 
