更新 瓷砖选择.md

--- a/瓷砖选择.md
+++ b/瓷砖选择.md
@@ -41,7 +41,7 @@
 买瓷砖好看是最重要的，要配合家庭装修风格。质量一般不是问题。
 不要用装修公司特供的砖，来源不明。
 
-## 19年价格
+## 价格
 
 300\*300 品牌瓷砖 几块到十几块
 300\*600 十几块，节假日可能打折
@@ -50,6 +50,8 @@
 * 重庆柔光二三线牌子可以按照40以内35-37去砍价800*800
 
 * 方林冠珠 800略粗糙的柔光，68 4*8的柔光33
+* 金圣 800柔光天鹅绒，68
+
 ## 国标
 
 GB/T 4100-2015 陶瓷砖
