--- a/瓷砖选择.md
+++ b/瓷砖选择.md
@@ -43,26 +43,29 @@
 
 ## 价格
 
-300\*300 品牌瓷砖 几块到十几块
-300\*600 十几块，节假日可能打折
-800\*800 几十到几百，几十的很可能贴牌，比较薄质量差，建议不考虑
-
+* 300\*300 品牌瓷砖 几块到十几块
+* 300\*600 十几块，节假日可能打折
+* 800\*800 几十到几百，几十的很可能贴牌，比较薄质量差，建议不考虑
 * 重庆柔光二三线牌子可以按照40以内35-37去砍价800*800
-
 * 方林冠珠 800略粗糙的柔光，68 4*8的柔光33
 * 金圣 800柔光天鹅绒，68
+* 英超 800柔光天鹅绒 45
+* 大角鹿 800柔光天鹅绒 53
 
 ## 国标
 
 GB/T 4100-2015 陶瓷砖
+
 * 低吸水率瓷质砖，精细，A1a类，不要炻质砖
 
 ## 瓷砖店种类
+
 * 品牌店直营
 * 电商品牌
 * 个人小店
 
 ## 行业现状
+
 大品牌要保护代理商，所以在避免做电商，给代理商保留利润。因此价格波动会比较大，需要仔细甄别。
 
 ## 踢脚线波打线（boundary）加工费
