--- a/卫生间设计.md
+++ b/卫生间设计.md
@@ -20,6 +20,7 @@
 
 * 马桶
 * 更大的储物空间
+* 淋浴房玻璃长1.53m，高2m，总3.06平方
 
 ## 蹲便器
 
@@ -78,3 +79,7 @@
   * 蹲便，799，300高度有点恰，全施釉
   * 蹲便内嵌水箱2000
   * 马桶1300，一圈孔出水，全施釉
+* 惠达
+  * 60cm浴室柜1800
+  * 100cm浴室柜
+  * 22cm高的蹲便500
