--- a/木材选择.md
+++ b/木材选择.md
@@ -1,6 +1,5 @@
 # 木材选择
 
-
 ## 全屋定制板材
 
 板材是由`基材（素板）+饰面`组成，素板是由`各种形式的木头+胶`组成。胶水的添加决定了板材的环保性，无醛指的就是使用mdi胶的板材。
@@ -47,6 +46,7 @@
 饰面主要是为了好看和摸着舒服，其他不用考虑
 
 * 三聚氰胺：大多颗粒板的外饰面都是这个
+* PET肤感膜：耐磨耐划，但是无造型。有反光的和哑光（肤感）的，适合用在客厅厨房浴室，容易清洁。略贵
 * pvc：一般是密度板造型后表面上的
 * 其他：pet、烤漆、木皮，普通装修不用考虑
 
@@ -58,13 +58,24 @@
 
 ### 五金品牌
 
-国产技术成熟，选大牌即可
+进口的最贵但是好
 
+* 海蒂诗
 * 百隆
-* 东泰
+* 海福乐
+
+国产
+
 * 悍高
 * 顶固
 * 诺米
+* 东泰
+
+### 精板和素板
+
+* 精板是板材厂自己贴好饰面的，板材厂的机器比一般的加工厂更好，而且精板几乎都有防伪标记。精板更贵
+* 做精板的全屋定制一般都有板材厂的授权书
+* 素板是其他加工厂自己贴饰面纸，质量参差不齐，便宜
    
 ### 板材品牌及特性
 
