--- a/家电选择.md
+++ b/家电选择.md
@@ -100,6 +100,14 @@
 * 除味：活性炭吸附的有点用，但是吸饱和之后还能不能用不清楚，总的来说有点用但不多
 * 控氧技术：减少新鲜蔬菜的呼吸氧化，可以让菜保存更长时间。免费做法：给蔬菜套个袋子密封。
 * 保鲜技术：迷瞪测试基本没用，核心在于要让温度稳定，温度不稳定的菜容易坏
+* 尺寸
+![](./img/海尔510尺寸.png)
+
+美的
+
+* 尺寸
+![](./img/美的bcd508尺寸1.png)
+![](./img/美的bcd508尺寸2.png)
 
 ## 洗衣机
 
